--- a/_posts/2017-09-20-2017蓝盾杯Kali部分WP.md
+++ b/_posts/2017-09-20-2017蓝盾杯Kali部分WP.md
@@ -2,7 +2,7 @@
 layout: post
 title: "2017蓝盾杯Kali部分Writeup"
 date: 2017-09-20
-description: "蓝盾杯Writeup"
+description: "CTF"
 tag: CTF
 ---
 ---
@@ -11,141 +11,272 @@ tag: CTF
 
 ---
 
+### 目录：
+
+* <a href="#one" target="_self">1. 三个flag(其实是有三个题目)</a>
+* <a href="#two" target="_self">4. 签到</a>
+* <a href="#a" target="_self">5. 蓝盾安全，与你同行</a>
+* <a href="#a1" target="_self">6. 慢点，慢点，再慢点</a>
+* <a href="#a2" target="_self">7. 听说静静的密码丢了</a>
+* <a href="#a3" target="_self">8. 会中文不是万能的</a>
+* <a href="#f1" target="_self">9. 猪圈陷阱</a>
+* <a href="#zg" target="_self">10. 仔细寻找</a>
+* <a href="#one" target="_self">11. 奇奇怪怪的路径？</a>
+* <a href="#two" target="_self">12. 探险</a>
+* <a href="#a" target="_self">13. 这是小静的自拍照，你能找到亮点吗？</a>
+* <a href="#a1" target="_self">14. 真真假假</a>
+* <a href="#a2" target="_self">15. 莫名的用户</a>
+* <a href="#a3" target="_self">16. 混合编码</a>
+* <a href="#f1" target="_self">17. 恐怖的字条</a>
+* <a href="#zg" target="_self">18. 面无表情的凤姐</a>
+* <a href="#a3" target="_self">19. 小静想蹭楼下那个同样刚毕业两年的女生家的WiFi，实现他的梦想吧。</a>
+* <a href="#f1" target="_self">20. 什么鬼密码</a>
+* <a href="#zg" target="_self">21. 简单逆向</a>
+* <a href="#a3" target="_self">22. 三层加密</a>
+* <a href="#f1" target="_self">23. Too yang</a>
+* <a href="#zg" target="_self">24. 被囚禁的凯撒{fbtsytyanowx}ns</a>
+* <a href="#a3" target="_self">25. 村口的王尼玛</a>
+* <a href="#f1" target="_self">26. jsfuck编码</a>
+* <a href="#zg" target="_self">27. 古老的东西</a>
+* <a href="#a3" target="_self">28. 凯撒与Vigenère</a>
+* <a href="#f1" target="_self">29. 失败是成功之母，努力吧骚年！</a>
+* <a href="#zg" target="_self">30. 我们有什么不同</a>
+* <a href="#zg" target="_self">总结</a>
+
+---
+
 ### 题目
+
 ![images](/images/2017-09-20/ld1.png)
 
-### 1.三个flag
-访问www.bdctf1.com
-获取必要的信息
-ip：192.168.30.20
+------
+
+### <span id = "f1">1. 三个flag(其实是有三个题目)</span>
+
+访问 `www.bdctf1.com` <br>
+
+获取必要的信息 <br>
+
+**ip：192.168.30.20**
 
 ![images](/images/2017-09-20/ld2.png)
 
-nmap -sV -PN 192.168.30.20
+-------
+
+端口扫描命令：**`nmap -sV -PN 192.168.30.20`** <br>
+
 ![images](/images/2017-09-20/ld3.png)
 
-第一题的题目提示是ftp，那么使用msf尝试弱口令破解<br/>
-user.txt
+-------
+
+第一题的题目提示是 **ftp**，那么使用 **msf**尝试弱口令破解 <br/>
+
+使用模块，命令：<br>
+```bash
+msf auxiliary/scanner/ftp/ftp_login     # ftp破解模块
+```
+
+导入用户名和密码字典， **user.txt** 和 **pass.txt** <br>
 
 ![images](/images/2017-09-20/ld4.png)
 
-pass.txt
+-----
 
 ![images](/images/2017-09-20/ld5.png)
 
-```
-msf auxiliary/scanner/ftp/ftp_login模块破解
-```
+-------
+
+开始爆破，<br>
+
 ![images](/images/2017-09-20/ld6.png)
 
-得到2个账户，经测试得匿名帐号不能上传，test帐号可以
+-------
+
+得到**2个账户**，经测试得**匿名帐号不能上传**，**test帐号可以** <br>
 
 ![images](/images/2017-09-20/ld7.png)
 
-连接ftp找到flag1
+-------
+
+连接ftp找到flag1 <br>
 
 ![images](/images/2017-09-20/ld8.png)
 
-上传asp大马，发现都不能解析执行。
+-------
 
-![images](/images/2017-09-20/ld9.png)
+上传asp大马，发现都不能解析执行。 <br>
+
+![images](/images/2017-09-20/ld9.png) <br>
 
 ![images](/images/2017-09-20/ld10.png)
 
-cer证书格式也可以被iis解析，修改后缀，上传执行成功
+--------
 
-![images](/images/2017-09-20/ld11.png)
+cer证书格式可以被iis解析，修改后缀，上传执行成功 <br>
+
+![images](/images/2017-09-20/ld11.png) <br>
 
 ![images](/images/2017-09-20/ld12.png)
 
-cms目录是ftp目录，先看看上一级目录，<br/>
-发现网站目录D:/wwwroot/web1/wwwroot<br/>
-wordpress存放数据库密码的文件是：wp-config.php
+-------
+
+**cms**目录是**ftp**目录，先看看上一级目录，<br/>
+
+发现网站目录： **`D:/wwwroot/web1/wwwroot`**<br/>
+
+**wordpress** 存放数据库密码的文件是：**`wp-config.php`** <br>
 
 ![images](/images/2017-09-20/ld13.png)
 
-下载打开发现flag2
+--------
+
+下载打开发现**flag2** <br>
 
 ![images](/images/2017-09-20/ld14.png)
 
-登录mysql，查询该用户是普通用户
+------
+
+登录mysql，查询该用户是普通用户 <br>
 
 ![images](/images/2017-09-20/ld15.png)
 
-在大马里尝试下root:mysql2016，成功连接
+-----
+
+在大马里尝试下 **root:mysql2016**，成功连接 <br>
 
 ![images](/images/2017-09-20/ld16.png)
 
-上传的udf.php进行提权
+-----
 
-![images](/images/2017-09-20/ld17.png)
+上传的**udf.php**进行提权 <br>
+
+![images](/images/2017-09-20/ld17.png) <br>
+
 ![images](/images/2017-09-20/ld18.png)
 
-上面有一个提示执行whoami能得到flag
-那么尝试下：
-flag{38c9b80}<br/>
-flag{38c9b80\mysql}<br/>
-flag{win2003-38c9b80}<br/>
-flag{win2003-38c9b80\mysql}（OK）
+------
 
+上面有一个提示执行**whoami**能得到flag <br>
 
-### 第一题：三个flag之FTP中的秘密
+那么尝试下：<br>
+**flag{38c9b80}**<br/>
+**flag{38c9b80\mysql}**<br/>
+**flag{win2003-38c9b80}**<br/>
+**flag{win2003-38c9b80\mysql}**（OK）
+
+------
+
+**所以最后：** <br>
+
+##### 1. 三个flag之FTP中的秘密
+
 ![images](/images/2017-09-20/ld19.png)
 
-### 第二题：三个flag之连接数据库的钥匙
+------
+
+##### 2. 三个flag之连接数据库的钥匙
+
 ![images](/images/2017-09-20/ld20.png)
 
-### 第三题：三个flag之提权的魔力
-flag{win2003-38c9b80\mysql}
+-----
 
-### 第四提：签到
-打开第四题题目->搜索flag即可
+##### 3. 三个flag之提权的魔力
+
+**flag{win2003-38c9b80\mysql}**
+
+-------
+
+
+### <span id = "f4">4. 签到</span>
+
+打开第四题题目->**搜索flag即可** <br>
+
 ![images](/images/2017-09-20/ld21.png)
 
-### 第五题：蓝盾安全，与你同行
-获取信息，根据User-Agent来判断浏览器
+------
+
+
+### <span id = "f5">5. 蓝盾安全，与你同行</span>
+
+获取信息，根据**User-Agent**来判断浏览器 <br>
+
 ![images](/images/2017-09-20/ld22.png)
 
-使用burpsuite拦截，然后把User-Agent的值改成bluedon即可得到flag
+------
+
+使用 **burpsuite**拦截，然后把 **User-Agent**的值改成**bluedon**即可得到flag <br>
 
 ![images](/images/2017-09-20/ld23.png)
 
-### 第六题：慢点，慢点，再慢点
+------
 
-提示说为空，并不是说没密码，尝试'' ，“”，”null”，null，最后null成功
+
+
+### <span id = "f6">6. 慢点，慢点，再慢点</span>
+
+提示说为空，并不是说没密码， <br>
+
+然后尝试 **`'' ，"" ，"null" ，null`** ，最后null成功 <br>
 
 ![images](/images/2017-09-20/ld24.png)
 
-需要burpsuite拦截，不然会跳转到另外一个页面
+------
+
+需要 **burpsuite**拦截，不然会跳转到另外一个页面 <br>
+
 ![images](/images/2017-09-20/ld25.png)
 
-再用burpsuite访问lll.html得到flag
+-------
+
+再用 **burpsuite**访问**lll.html**得到flag <br>
 
 ![images](/images/2017-09-20/ld26.png)
 
-### 第七题：听说静静的密码丢了
+-------
+
+
+### <span id = "f7">7. 听说静静的密码丢了</span>
 
 ![images](/images/2017-09-20/ld27.png)
 
-尝试不填密码登录，得到提示：4位数字的密码<br/>
-使用burpsuite暴力破解即可
+-------
+
+尝试不填密码登录，得到提示：**4**位数字的密码<br/>
+
+使用burpsuite暴力破解即可 <br>
+
+最后 <br>
 
 ![images](/images/2017-09-20/ld28.png)
 
 ![images](/images/2017-09-20/ld29.png)
 
-### 第八题：会中文不是万能的
-访问得到信息，应该是根据语言来判断国家的 (http头：Accept-Language)
+-------
+
+### <span id = "f8">8. 会中文不是万能的</span>
+
+访问得到信息，应该是根据语言来判断国家的 (http头：Accept-Language) <br>
+
 ![images](/images/2017-09-20/ld30.png)
 
-使用burpsuite拦截，然后把Accept-Language 的值改成en-US即可得到flag
+------
+
+然后使用 **burpsuite**拦截，然后把 **Accept-Language** 的值改成**en-US**即可得到flag <br>
+
 ![images](/images/2017-09-20/ld31.png)
 
-### 第九题：猪圈陷阱
-打开题目文件，是一串url编码
+--------
+
+### <span id = "f9">9. 猪圈陷阱</span>
+
+打开题目文件，是一串**url编码** <br>
+
 ![images](/images/2017-09-20/ld32.png)
 
-丢进burpsuite解码，得到：
+------
+
+丢进**burpsuite**解码，得到：<br>
+
 ```
 JiN4NGY7JiN4MzU7JiN4MzM7JiN4NTg7JiN4NGY7JiN4NGM7JiN4NTQ7JiN4MzI7JiN4NGU
 7JiN4NDI7JiN4MzI7JiN4NTc7JiN4NTU7JiN4MzU7JiN4NGM7JiN4NDI7JiN4NGU7JiN4NWE7
@@ -153,309 +284,527 @@ JiN4NTc7JiN4NDc7JiN4NTk7JiN4MzM7JiN4NDQ7JiN4NGQ7JiN4NDY7JiN4NWE7JiN4NTI7J
 iN4NTc7JiN4MzY7JiN4MzM7JiN4NDk7JiN4M2Q7
 ```
 
-没见过的密文，先用base64试试，结果得到html编码的字符串
+-----
+
+没见过的密文，先用**base64**试试，结果得到**html**编码的字符串 <br>
+
 ```
 &#x4f;&#x35;&#x33;&#x58;&#x4f;&#x4c;&#x54;&#x32;&#x4e;&#x42;&#x32;&#x57;&#x55;&
 #x35;&#x4c;&#x42;&#x4e;&#x5a;&#x57;&#x47;&#x59;&#x33;&#x44;&#x4d;&#x46;&#x5a;&#
 x52;&#x57;&#x36;&#x33;&#x49;&#x3d;
 ```
-Html解码得到：
+
+------
+
+Html解码得到： <br>
 ```
 O53XOLT2NB2WU5LBNZWGY3DMFZRW63I=
 ```
+
+----
+
 ![images](/images/2017-09-20/ld33.png)
 
-这个编码类似base64，其实就是base32，使用python解码，得到新网址www.zhujuanllll.com
+-----
+
+这个编码类似**base64** ，其实就是**base32** ，<br>
+
+使用python解码，得到新网址 **`www.zhujuanllll.com`** <br>
 
 ![images](/images/2017-09-20/ld34.png)
 
-访问得到一张图片，再结合标题提示，知道这是猪圈密码。
+------
+
+访问得到一张图片，再结合标题提示，知道这是猪圈密码。<br>
 
 ![images](/images/2017-09-20/ld35.png)
 
-对应解密表得到：nzcasfmzoh 但提交flag{nzcasfmzoh} 不正确
-经过各种尝试，最后得出解密表以倒装形式解密出来的才是正确的flag
+------
+
+对应解密表得到：**nzcasfmzoh** 但提交flag{nzcasfmzoh}**不正确** <br>
+
+经过各种尝试，最后得出解密表以倒装形式解密出来的才是正确的flag <br>
 
 ![images](/images/2017-09-20/ld36.png)
 
-flag为maxzhunals
-格式：flag{maxzhunals}
+-----
 
-### 第十题：仔细寻找
-打开www.bdctf7.com用burpsuite抓包发现cookie有user和pass，但发现密码是错误的<br/>
+flag为maxzhunals <br>
+格式：**flag{maxzhunals}**
+
+-------
+
+
+
+### <span id = "f10">10. 仔细寻找</span>
+
+打开 **`www.bdctf7.com`** <br>
+
+用 **burpsuite**抓包发现 **cookie**有 **user**和 **pass**，但发现密码是错误的 <br/>
+
 经过各种尝试无果，无奈之下先扫目录文件看看吧。<br/>
-使用dirbuster目录扫描，字典在/usr/share/dirbuster/wordlist/目录下
+
+使用**dirbuster**目录扫描，字典在**`/usr/share/dirbuster/wordlist/目录下`** <br>
 
 ![images](/images/2017-09-20/ld37.png)
 
-扫到个login.php，登录一看，是帐号密码
+-----
+
+扫到个**login.php**，登录一看，是帐号密码 <br>
 
 ![images](/images/2017-09-20/ld38.png)
 
-修改密码后提交，得到新页面（其实只要修改cookie中的password就可以了）
+-----
+
+修改密码后提交，得到新页面（其实只要修改cookie中的password就可以了）<br>
 
 ![images](/images/2017-09-20/ld39.png)
 
-打开新页面-->查看源码-->最下端
+------
+
+打开新页面-->查看源码-->最下端 <br>
 
 ![images](/images/2017-09-20/ld40.png)
 
-这说明点击后会跳转到一个新页面,在看上面2个数
-第一个像md5
-第二个先来base64看看
+-----
+
+这说明点击后会跳转到一个新页面,在看上面**2**个数 <br>
+
+第一个像**md5** <br>
+
+第二个先来**base64**看看 <br>
 
 ![images](/images/2017-09-20/ld41.png)
 
-6位数字，好办。<br/>
-第一个是md5,可使用工具进行暴力破解对比<br/>
-如果没有好的工具，那就不管第一个了，直接使用burpsuite暴力破解即可
+-------
+
+**6**位数字，好办。<br/>
+
+第一个是**md5**,可使用工具进行暴力破解对比<br/>
+
+如果没有好的工具，那就不管第一个了，直接使用**burpsuite**暴力破解即可 <br>
+
+最后： <br>
 
 ![images](/images/2017-09-20/ld42.png)
 
 ![images](/images/2017-09-20/ld43.png)
 
-### 第十一题：奇奇怪怪的路径？
-访问：www.bdctf9.com/robots.txt
+------
+
+
+### <span id = "f11">11. 奇奇怪怪的路径？</span>
+
+访问：www.bdctf9.com/robots.txt <br>
 
 ![images](/images/2017-09-20/ld44.png)
 
-访问：www.bdctf9.com/admin+login/bluedon.asp
+------
+
+访问：www.bdctf9.com/admin+login/bluedon.asp <br>
 
 ![images](/images/2017-09-20/ld45.png)
 
-### 第十二题：探险
-www.bdctf0.com
-查看源码发现信息
+------
+
+
+### <span id = "f12">12. 探险</span>
+
+www.bdctf0.com <br>
+
+查看源码发现信息 <br>
 
 ![images](/images/2017-09-20/ld46.png)
 
-在控制台执行脚本后得到明文
+-------
+
+在控制台执行脚本后得到明文 <br>
 
 ![images](/images/2017-09-20/ld47.png)
 
-在将window.location.href的值进行base64解码得到flag
+--------
+
+在将**window.location.href**的值进行**base64**解码得到flag <br>
 
 ![images](/images/2017-09-20/ld48.png)
 
-### 第十三题：这是小静的自拍照，你能找到亮点吗？
-一看见图片，先丢进winhex里在说，在结尾处发现是PK，说明是一个zip文件
+-------
+
+
+### <span id = "f13">13. 这是小静的自拍照，你能找到亮点吗？</span>
+
+一看见图片，先丢进**winhex**里在说，在结尾处发现是**PK**，说明是一个**zip**文件 <br>
 
 ![images](/images/2017-09-20/ld49.png)
 
-把zip提取出来:编辑-->定义选块
-我这里偏移是84F1-87FF（从开头搜索到的地一个PK，就是rar文件的开头）
+--------
+
+把zip提取出来:编辑-->定义选块 <br>
+
+我这里偏移是**84F1-87FF**（从开头搜索到的地一个PK，就是rar文件的开头）<br>
 
 ![images](/images/2017-09-20/ld50.png)
 
-选中后再点击编辑-->复制选块-->至新文件-->存为1.zip
+--------
+
+选中后再点击编辑-->复制选块-->至新文件-->存为**1.zip** <br>
 
 ![images](/images/2017-09-20/ld51.png)
 
-解压1.zip得到pcapng数据包，用wireshark打开，结果为一次ping请求
+------
+
+解压 **1.zip** 得到**pcapng**数据包，用**wireshark**打开，结果为一次**ping**请求 <br>
 
 ![images](/images/2017-09-20/ld52.png)
 
-看了一轮，发现每一个ICMP包都带有一个字符
+-----
+
+看了一轮，发现每一个**ICMP**包都带有一个字符 <br>
 
 ![images](/images/2017-09-20/ld53.png)
 
-最后结果得到：flag{5efv38f2}
+-------
 
-### 第十四题：真真假假
+最后结果得到：**flag{5efv38f2}**
+
+-------
+
+
+### <span id = "f14">14. 真真假假</span>
+
 ![images](/images/2017-09-20/ld54.png)
 
-使用wireshark打开hack.pcapng包，发现有rar上传
+-------
+
+使用**wireshark**打开**hack.pcapng**包，发现有**rar**上传 <br>
 
 ![images](/images/2017-09-20/ld55.png)
 
-导出该包另存为rar
+------
+
+导出该包另存为**rar** <br>
 
 ![images](/images/2017-09-20/ld56.png)
 
-打开发现是损坏的
+-----
+
+打开发现是损坏的 <br>
 
 ![images](/images/2017-09-20/ld57.png)
 
-修复一下即可得到flag：repair 导出的压缩包
+-----
+
+修复一下即可得到**flag：repair** 导出的压缩包 <br>
 
 ![images](/images/2017-09-20/ld58.png)
 
-修复之后的新压缩包不用密码就可直接获取该flag图片
+------
+
+修复之后的新压缩包不用密码就可直接获取该flag图片 <br>
 
 ![images](/images/2017-09-20/ld59.png)
 
-### 第十五题：莫名的用户
+-------
+
+### <span id = "f15">15. 莫名的用户</span>
+
 ![images](/images/2017-09-20/ld60.png)
 
-开启自动添加用户，说明在启动时执行了脚本添加用户，linux的启动脚本是在/etc/rc.local
+------
+
+开启自动添加用户，说明在启动时执行了脚本添加用户，linux的启动脚本是在 **`/etc/rc.local`** <br>
 
 ![images](/images/2017-09-20/ld61.png)
 
-进入脚本所在位置查看里面内容
+-------
+
+进入脚本所在位置查看里面内容 <br>
 
 ![images](/images/2017-09-20/ld62.png)
 
-此脚本内容为开机启动检查是否有bluedon用户，没有则自动创建。flag在脚本标注里
+-------
+
+此脚本内容为开机启动检查是否有**bluedon**用户，没有则自动创建。flag在脚本标注里 <br>
 
 ![images](/images/2017-09-20/ld63.png)
 
-### 第十六题：混合编码
-题目结合文件名应该是base64和base32替换编码
+-------
+
+
+### <span id = "f16">16. 混合编码</span>
+
+题目结合文件名应该是**base64**和**base32**替换编码 <br>
 
 ![images](/images/2017-09-20/ld64.png)
 
-结果：flag{bluedon852}
+------
 
-### 第十七题：恐怖的字条
+结果：**flag{bluedon852}**
+
+------
+
+
+### <span id = "f17">17. 恐怖的字条</span>
+
 打开题目，发现有一个培根密码表，说明跟培根密码有关。<br/>
-密码表中只有A和B，经过多次测试，发现26个字母a-z，其中a-m 表示为A，n-z表示为B<br/>
-然后得到培根密码，对照密码表解得flag
+
+密码表中只有**A**和**B**，经过多次测试，发现**26**个字母**a-z**，其中**a-m** 表示为**A**，**n-z**表示为**B**<br/>
+
+然后得到培根密码，对照密码表解得flag <br>
 
 ![images](/images/2017-09-20/ld65.png)
 
-### 第十八题：面无表情的凤姐
-把凤姐.jpg拖进winhex里，搜索flag{
+-------
+
+
+### <span id = "f18">18. 面无表情的凤姐</span>
+
+把**凤姐.jpg** 拖进**winhex**里，搜索**flag{** 即可 <br>
 
 ![images](/images/2017-09-20/ld66.png)
 
-### 第十九题：小静想蹭楼下那个同样刚毕业两年的女生家的WiFi，实现他的梦想吧。
-毕业两年？试试生日。使用python生成一个自定义格式的字典
+--------
+
+
+### <span id = "f19">19. 小静想蹭楼下那个同样刚毕业两年的女生家的WiFi，实现他的梦想吧。</span>
+
+毕业两年？ 那试试生日，使用python生成一个自定义格式的字典 <br>
 
 ![images](/images/2017-09-20/ld67.png)
 
-wifi破解：aircrack-ng -w pass.txt xx.cap 得到哦密码19990908
+-------
+
+wifi破解：**aircrack-ng -w pass.txt xx.cap** 得到密码**19990908** <br>
 
 ![images](/images/2017-09-20/ld68.png)
 
-### 第二十题：什么鬼密码
+------
+
+
+### <span id = "f20">20. 什么鬼密码</span>
+
 ![images](/images/2017-09-20/ld69.png)
 
 ![images](/images/2017-09-20/ld70.png)
 
-键盘密码：ovpl
-格式：flag{ovpl}
+------
 
-### 第二十一题：
-用IDA打开程序，直接搜索 flag{ 即可
+键盘密码：ovpl  <br>
+格式：**flag{ovpl}**
+
+------
+
+
+### <span id = "f21">21. 简单逆向</span>
+
+用IDA打开程序，直接搜索 **flag{** 即可 <br>
 
 ![images](/images/2017-09-20/ld71.png)
 
-### 第二十二题：三层加密
-打开文本得到base64编码，进行3次解码得到flag
+-------
+
+
+### <span id = "f22">22. 三层加密</span>
+
+打开文本得到**base64**编码，进行**3**次解码得到flag <br>
 
 ![images](/images/2017-09-20/ld72.png)
 
-### 第二十三题：Too yang
-打开题目是一张图片，丢进winhex看了一轮，发现有重复的地方
-开头
+-----
+
+
+### <span id = "f23">23. Too yang</span>
+
+打开题目是一张图片，丢进**winhex**看了一轮，发现有重复的地方 <br>
+
+开头 <br>
 
 ![images](/images/2017-09-20/ld73.png)
 
-搜索JFIF
+------
+
+搜索**JFIF** <br>
 
 ![images](/images/2017-09-20/ld74.png)
 
+------
+
 说明有两张图片，将这两张图片提取出来<br/>
+
 winhex：编辑-->定义选块(起始0x0,结束0x19F6)-->编辑-->复制选块-->至新文件（保存为1.jpg）<br/>
-另外一个则保存为2.jpg(起始0x19F7,结束0x33E0)
+
+另外一个则保存为**2.jpg**(起始0x19F7,结束0x33E0) <br>
 
 ![images](/images/2017-09-20/ld75.png)
 
-1.jpg比2.jpg多了7个字节，可用HxD进行文件对比找到不同的地方<br/>
-我这里由于运气好，拉到底层就发现不同之处
+-----
+
+**1.jpg** 比 **2.jpg** 多了**7**个字节，可用**HxD**进行文件对比找到不同的地方<br/>
+
+我这里由于运气好，拉到底层就发现不同之处 <br>
 
 ![images](/images/2017-09-20/ld76.png)
 
-得到一个密文：WCRX_rfJYHne_，看起来很像一个flag格式，应该是替换加密<br/>
-经过测试得知是凯撒密码，位移9位：flag{aoshqwn}
+------
 
-### 第二十四题：被囚禁的凯撒{fbtsytyanowx}ns
+得到一个密文：**WCRX_rfJYHne_** ，看起来很像一个flag格式，应该是替换加密<br/>
+
+经过测试得知是凯撒密码，位移9位：**flag{aoshqwn}**
+
+-----
+
+
+### <span id = "f24">24. 被囚禁的凯撒{fbtsytyanowx}ns</span>
+
 ![images](/images/2017-09-20/ld77.png)
 
-栅栏解密得到： {afnbotwsxy}tnys<br/>
-但格式是flag{xxx}<br/>
-把{afnbotwsxy}tnys反转  synt{yxswtobnfa}<br/>
-再进行凯撒解密得到flag<br/>
+-----
+
+栅栏解密得到： {afnbotwsxy}tnys <br/>
+
+但格式是flag{xxx} <br/>
+
+把**{afnbotwsxy}tnys**反转得到 **synt{yxswtobnfa}** <br/>
+
+再进行凯撒解密得到flag <br/>
+
 flag{lkfjgboasn} --- 13
 
-### 第二十五题：村口的王尼玛
-打开题目目录发现2个加密的压缩文件
+------
+
+
+### <span id = "f25">25. 村口的王尼玛</span>
+
+打开题目目录发现2个加密的压缩文件 <br>
 
 ![images](/images/2017-09-20/ld78.png)
 
-第一个rar名字和题目猜测密码是 王尼玛 wangnima（正确） 尼玛之类的<br/>
-打开文件一看是王尼玛的个人信息，根据信息生成密码字典
+------
+
+第一个**rar**名字和题目猜测密码是 **王尼玛 wangnima（正确）** 尼玛之类的<br/>
+
+打开文件一看是王尼玛的个人信息，根据信息生成密码字典 <br>
 
 ![images](/images/2017-09-20/ld79.png)
 
-使用密码字典破解第二个rar
+------
+
+使用密码字典破解第二个rar <br>
+
+最后： <br>
 
 ![images](/images/2017-09-20/ld80.png)
 
 ![images](/images/2017-09-20/ld81.png)
 
-### 第二十六题：
-打开文本，是一个jsfuck编码，丢到控制台打印一下得到base64
+------
+
+
+### <span id = "f26">26. jsfuck编码</span>
+
+打开文本，是一个**jsfuck**编码，丢到控制台打印一下得到**base64** <br>
 
 ![images](/images/2017-09-20/ld82.png)
 
-然后解码得到flag
+-----
+
+然后解码得到flag <br>
 
 ![images](/images/2017-09-20/ld83.png)
 
-### 第二十七题：古老的东西
-打开文本一看是一个html编码，解码得到 lag{thlfsuudsleuiqqawnqwgetntcifpuoa}tyd
+-------
+
+### <span id = "f27">27. 古老的东西</span>
+
+打开文本一看是一个html编码，<br>
+
+解码得到 **lag{thlfsuudsleuiqqawnqwgetntcifpuoa}tyd** <br>
 
 ![images](/images/2017-09-20/ld84.png)
 
-开头有lag，括号内也有f，应该是经过位移打乱顺序，一共有40个字符，尝试8X5排列<br/>
-lag{thlf<br/>
-suudsleu<br/>
-iqqawnqw<br/>
-getntcif<br/>
-puoa}tyd<br/>
-尝试将列排成行，再调整下行之间的顺序，有了较明显的结果<br/>
-fuwfd<br/>
-lsigp<br/>
-auqeu<br/>
-guqto<br/>
-{dana<br/>
-hlnct<br/>
-leqiy<br/>
-tswt}<br/>
-从上往下拼接，得到flag<br/>
-flag{hltusuudleswiqqanqwfgetncitdpuoaty}
+-----
 
-### 第二十八题：凯撒与Vigenère（待补充）
-7gB8xL4cU2dE9hD2cO0cN<br/>
-Vigenère一般是需要密钥的，但题目却没有给出密钥<br/>
-分析密文：数字+小写字母+大写字母<br/>
-分成3组看看：<br/>
-7  8  4  2  9  2  0<br/>
-g  x  c  d  h  c  c<br/>
-B  L  U E  D O N<br/>
-猜测BLUEDON是一个密文，尝试破解<br/>
-密文对照表
+开头有lag，括号内也有f，应该是经过位移打乱顺序，一共有40个字符，尝试**8X5**排列<br/>
+
+lag{thlf <br/>
+suudsleu <br/>
+iqqawnqw <br/>
+getntcif <br/>
+puoa}tyd <br/>
+
+尝试将列排成行，再调整下行之间的顺序，有了较明显的结果<br/>
+
+fuwfd <br/>
+lsigp <br/>
+auqeu <br/>
+guqto <br/>
+{dana <br/>
+hlnct <br/>
+leqiy <br/>
+tswt} <br/>
+
+从上往下拼接，得到flag<br/>
+
+**flag{hltusuudleswiqqanqwfgetncitdpuoaty}**
+
+-------
+
+
+### <span id = "f28">28. 凯撒与Vigenère</span>
+
+**7gB8xL4cU2dE9hD2cO0cN** <br/>
+
+**Vigenère**一般是需要密钥的，但题目却没有给出密钥 <br/>
+
+分析密文：数字**+**小写字母**+**大写字母 <br/>
+
+分成3组看看： <br/>
+7  8  4  2  9  2  0 <br/>
+g  x  c  d  h  c  c <br/>
+B  L  U E  D O N <br/>
+
+猜测**BLUEDON**是一个密文，尝试破解 <br/>
+
+密文对照表 <br>
 
 ![images](/images/2017-09-20/ld85.png)
 
-解得：<br/>
-7  8  4  2  9  2  0<br/>
-h  I  w h  k  q  p<br/>
-凯撒一般都是字母位移加密，但上面有数字，猜测应该是位移值。<br/>
-尝试破解得到：aasfbop<br/>
-格式：flag{aasfbop} 提交成功
+------
 
-### 第二十九题：失败是成功之母，努力吧骚年！
+解得： <br/>
+7  8  4  2  9  2  0 <br/>
+h  I  w h  k  q  p <br/>
+
+凯撒一般都是字母位移加密，但上面有数字，猜测应该是位移值。<br/>
+
+尝试破解得到：**aasfbop** <br/>
+
+格式：**flag{aasfbop}** 提交成功
+
+-----
+
+### <span id = "f29">29. 失败是成功之母，努力吧骚年！</span>
+
 访问www.bdctf2.com，有cookie返回，然后将cookie中的login的值改成true，<br/>
-随便输入帐号密<br/>
-码即可得到flag
+
+随便输入帐号密 <br/>
+
+码即可得到flag <br>
 
 ![images](/images/2017-09-20/ld86.png)
 
-### 第三十题：我们有什么不同
-打开文件夹有2个txt文件，使用diff命令对比2个文件即可得到flag
+-----
+
+
+### <span id = "f30">30. 我们有什么不同</span>
+
+打开文件夹有**2个txt文件**，使用**diff**命令对比2个文件即可得到**flag** <br>
 
 ![images](/images/2017-09-20/ld87.png)
 
-把不同的地方拼接起来得到flag：flag{qqp_ASH_079_AMD}
+------
+
+最后把不同的地方拼接起来得到flag：**flag{qqp_ASH_079_AMD}**
+
+
+-------
