--- a/_posts/2017-10-02-2017强网杯线下AWD总结.md
+++ b/_posts/2017-10-02-2017强网杯线下AWD总结.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "2017强网杯线下AWD攻击&防御"
+title: "2017强网杯线下AWD进攻&防御"
 date: 2017-10-02
-description: "强网杯线下AWD攻防"
+description: "CTF"
 tag: AWD
 ---
 ---
@@ -12,34 +12,52 @@ tag: AWD
 ---
 
 ### 题记
+
 参加这次比赛颇有收获，学到很多，也认识了很多dalao<br/>
 
 虽然被吊打，但是感觉很开心
 
 ---
 
-### AWD攻击
+### 目录：
+
+* <a href="#f1" target="_self">进攻篇</a>
+* <a href="#f2" target="_self">防御篇</a>
+    * <a href="#f3" target="_self">1. 修改代码</a>
+    * <a href="#f4" target="_self">2. 改admin密码</a>
+    * <a href="#f5" target="_self">3. 修改注册代码</a>
+    * <a href="#f6" target="_self">4. 挂waf</a>
+* <a href="#zj" target="_self">后续</a>
+
+---
+
+
+### <span id = "f1">进攻篇</span>
+
 ![images](/images/2017-10-02/qwb1.png)
 
-这次线下攻防用的是一个Finecms，版本是5.0.9的
+-----
 
-比赛的时候对这个cms并不了解<br/>
+这次线下攻防用的是一个**Finecms** ，版本是**5.0.9**的
+
+比赛的时候对这个**cms**并不了解<br/>
 
 现在复现一下，<br/>
 
 从哪里跌倒，就从哪里爬起来。<br/>
 
 朋友给我看了自己审计的一片文章<br/>
+
 ```
 http://www.cnblogs.com/post/readauth?url=/test404/p/7351144.html
 ```
 其实百度也很多，<br/>
 
-5.0.9这个版本存在头像上传getshell漏洞<br/>
+**5.0.9**这个版本存在头像上传getshell漏洞<br/>
 
 比赛的源码是修改了的，先来看看<br/>
 
-```
+```php
     /**
      *  上传头像处理
      *  传入头像压缩包，解压到指定文件夹后删除非图片文件
@@ -100,59 +118,81 @@ http://www.cnblogs.com/post/readauth?url=/test404/p/7351144.html
 
 }
 ```
-可以看到这一段代码
-```
+
+可以看到这一段代码 <br>
+```php
 $bad_ext=array('php','php3','php4','php5');
 ```
+
 这里把基本把php后缀的文件都给屏蔽了<br/>
 
-但是忘了我们还有phtml
+但是忘了我们还有phtml <br>
 
+说明：<br>
 ```
-PHTML(有时叫做PHP)网页是一种包含PHP(一种和JavaScript或Microsoft VBScript类似的语言)脚本的网页和ASP一样，PHP脚本镶嵌在网页的HTML代码之中。
+PHTML(有时叫做PHP)网页是一种包含PHP(一种和JavaScript或Microsoft VBScript类似的语言)
+脚本的网页和ASP一样，PHP脚本镶嵌在网页的HTML代码之中。
 ```
+
 其实比赛中应该要想到了，之前CTF就有遇到过，我想我可能被打懵了吧。。。<br/>
 
-这里先上传一个jpg的一句话<br/>
+这里先上传一个**jpg**的一句话<br/>
 
-PS:因为直接上传的话phtml可能不行，他会判断是不是图片.<br/>
+PS: 因为直接上传的话**phtml**可能不行，他会判断是不是图片.<br/>
 
 ![images](/images/2017-10-02/qwb2.png)
 
-然后再点击保存抓包
+------
+
+然后再点击保存抓包 <br>
 
 ![images](/images/2017-10-02/qwb3.png)
 
-然后将这里jpeg改成phtml
+-----
+
+然后将这里**jpeg**改成**phtml** <br>
 
 ![images](/images/2017-10-02/qwb4.png)
 
 ![images](/images/2017-10-02/qwb5.png)
 
-然后Forward，他会报错
+-------
+
+然后**Forward** ，他会报错 <br>
 
 ![images](/images/2017-10-02/qwb6.png)
 
-但是我们看源码，并没有这一句英文的错误
+-----
+
+但是我们看源码，并没有这一句英文的错误 <br>
 
 ![images](/images/2017-10-02/qwb8.png)
 
-到目录上看看，果然上传上去了
+------
+
+到目录上看看，果然上传上去了 <br>
 
 ![images](/images/2017-10-02/qwb7.png)
+
+------
 
 然后菜刀连接直接可以在根目录上看到flag了<br/>
 
 这里就不演示了
 
-### 防御篇
+-------
 
-### 1.修改代码
 
-```
+### <span id = "f2">防御篇</span>
+
+
+### <span id = "f3">1. 修改代码</span>
+
+```php
 $bad_ext=array('php','php3','php4','php5');
 ```
-可以看到这段代码，没过滤phtml，这里可以添加上去，<br/>
+
+可以看到这段代码，没过滤**phtml**，这里可以添加上去，<br/>
 
 也可以添加其他后缀的文件，免得dalao们各种奇淫技巧突破<br/>
 
@@ -160,19 +200,29 @@ $bad_ext=array('php','php3','php4','php5');
 
 这里我就不清楚了,不过也可以添加上去过滤掉<br/>
 
-### 2.改admin密码
+-----
+
+
+### <span id = "f4">2. 改admin密码</span>
 
 ![images](/images/2017-10-02/qwb9.png)
 
+-----
+
 admin密码其实可以在数据库中找到<br/>
 
-比赛中我是直接弱口令admin上去的<br/>
+比赛中我是直接**弱口令admin**上去的<br/>
 
 然后手速要快，修改之后别人就无法用你账号进入后台了
 
-### 3.修改注册代码
+------
+
+
+### <span id = "f5">3. 修改注册代码</span>
 
 ![images](/images/2017-10-02/qwb10.png)
+
+-----
 
 这里是注册的代码<br/>
 
@@ -182,7 +232,10 @@ admin密码其实可以在数据库中找到<br/>
 
 这样可以不用删除这个注册页面，删除的话会判断down机
 
-### 4.挂waf
+------
+
+
+### <span id = "f6">4. 挂waf</span>
 
 比赛后跟dalao交谈，说除了头像上传外还有一处命令执行漏洞，<br/>
 
@@ -192,17 +245,22 @@ admin密码其实可以在数据库中找到<br/>
 
 所以只能采用包含waf脚本了<br/>
 
-可以直接包含在index里面，注意waf所在目录
+可以直接**包含在index里面**，注意waf所在目录 <br>
 
 ![images](/images/2017-10-02/qwb11.png)
 
-你可以添加过滤各种函数，符号，base64编码等等<br/>
+------
+
+你可以添加过滤各种函数，符号，**base64**编码等等<br/>
 
 这样可以有效抵御一般的命令执行了(dalao路过)<br/>
 
 当然，如果会修改那个漏洞更好。
 
-### 后续
+------
+
+
+### <span id = "zj">后续</span>
 
 比赛不是唯一，能学到东西就好。<br/>
 
@@ -219,6 +277,4 @@ admin密码其实可以在数据库中找到<br/>
 **感谢支持我的朋友，**<br/>
 
 **感谢各位dalao帮我解答问题。**
-
-
 
