--- a/_posts/2017-10-28-NTFS数据流隐写.md
+++ b/_posts/2017-10-28-NTFS数据流隐写.md
@@ -2,23 +2,28 @@
 layout: post
 title: "双图NTFS数据流隐写"
 date: 2017-10-28
-description: "隐写"
+description: "CTF"
 tag: CTF
 ---
-
+---
 
 ### 前言
+
 貌似有一段时间没有更新了。。。<br/>
 
 最近P事有点多啊！！！
 
 ---
+
 ### 题目：ctf.rar
+
 **一个压缩包。**
 
 ![images](/images/2017-10-28/ntfs1.png)
 
-**解压之后是一张png图片，pwn、pwn、pwn**
+-----
+
+**解压之后是一张png图片，pwn、pwn、pwn** <br>
 
 ![images](/images/2017-10-28/ntfs2.png)
 
@@ -27,33 +32,42 @@ tag: CTF
 **这里有点坑，别被误以为是pwn题**<br/>
 
 **先扔到Kali**<br/>
+
 ```
 使用 binwalk -e ctf.png 命令解压查看
 ```
-**得到一张1.jpg**
+
+**得到一张1.jpg** <br>
+
 ![images](/images/2017-10-28/ntfs3.png)
 
 ---
+
 **然后又误以为flag在1.jpg里面，又是一顿操作**<br/>
 
 **然而并没有什么用**<br/>
 
-**然后大神又提示，查看文件大小，双图隐写**
+**然后大神又提示，查看文件大小，双图隐写** <br>
 
 ![images](/images/2017-10-28/ntfs4.png)
+
 ![images](/images/2017-10-28/ntfs5.png)
 
+------
+
 **文件大小确实有点诡异，说明还藏有东西**
----
 
 ---
-**LSB隐写，各种图片隐写解法都试了，还是不行。。。**<br/>
+
+**然后LSB隐写，各种图片隐写解法都试了，还是不行。。。**<br/>
 
 **然后。。。经过半天的脑洞，操作之后，dalao提示NTFS隐写（这里/手动捂脸）**<br/>
 
-**然后使用AlternateStreamView数据流检测工具扫描到了隐藏文件**
+**然后使用AlternateStreamView数据流检测工具扫描到了隐藏文件** <br>
 
 ![images](/images/2017-10-28/ntfs6.png)
+
+-----
 
 **这里还有一个大坑，使用360解压扫描不出来**<br/>
 
@@ -61,26 +75,34 @@ tag: CTF
 
 **用WinRaR解压就可以**<br/>
 
-**导出隐藏文件**
+**导出隐藏文件** <br>
+
 ![images](/images/2017-10-28/ntfs7.png)
----
 
 ---
+
 **导出得到一张ctf.png_2.jpg的图片**<br/>
 
 ![images](/images/2017-10-28/ntfs8.png)
 
+---
+
 **然后用StegSolve打开ctf.png_2.jpg图片**<br/>
 
-**再双图XOR**
+**再双图XOR** <br>
 
 **选择最后一个打开ctf.png_2.jpg**
+
 ![images](/images/2017-10-28/ntfs9.png)
+
 ![images](/images/2017-10-28/ntfs10.png)
+
+------
 
 **同样的方法把1.jpg也打开**<br/>
 
-**然后就。。。**
+**然后就。。。** <br>
 
 ![images](/images/2017-10-28/ntfs11.png)
+
 ---
