--- a/_posts/2018-05-19-网络资产信息探测.md
+++ b/_posts/2018-05-19-网络资产信息探测.md
@@ -3,28 +3,33 @@ layout: post
 title: "初探 | 网络资产信息探测"
 date: 2018-05-19
 description: "资产信息探测"
-tag: 折腾笔记
+tag: Web安全
 ---
 ---
 
 **资产检查还是第一次接触，不过总的来说，这个不算太难，就是耗时间。。**<br>
-(PS：上去就给我扫扫扫)
+
+PS：上去就给我扫扫扫
 
 ---
+
 这篇笔记记录的是探测网络中的机器和服务
 
 ---
 
+
 ### NO.1
 
 应客户要求，需要探测这些IP地址中有哪些机器，这些机器都开放哪些服务？？<br>
-**（PS：IP地址当然需要客户提供，不同客户也有不同的需求）**
+
+**PS：IP地址当然需要客户提供，不同客户也有不同的需求**
 
 ---
 
+
 ### NO.2
 
-<h2>所需工具：</h2>
+所需工具：<br>
 
 1.  Nmap<br/>
 
@@ -38,38 +43,38 @@ tag: 折腾笔记
 
 ### NO.3 工具比较
 
-Nmap大家应该都比较熟悉，能够扫描到很多信息，比如端口，系统版本，服务，以及产品信息，
+Nmap大家应该都比较熟悉，能够扫描到很多信息，比如端口，系统版本，服务，以及产品信息，<br>
 
-缺点就是扫的慢，但是准确率高。。
+缺点就是扫的慢，但是准确率高。。<br>
 
-这里我使用如下命令：
-
-```
+这里我使用如下命令：<br>
+```bash
 nmap -sV -v -sS -n -T5 -A -O -oX /root/xxx.xml 192.168.0.0/16
 
 ```
 
-**（PS：这里使用T5的速度，最高也是T5，量多的话可以把-sV和-sS去掉，扫描会跟快）**
+**PS：这里使用T5的速度，最高也是T5，量多的话可以把-sV和-sS去掉，扫描会跟快**
 
 ---
 
-Masscan这个我用的少，扫描速度很快，最高可以一次发100万个探测包，
+Masscan这个我用的少，扫描速度很快，最高可以一次发100万个探测包，<br>
 
-缺点就是不能探测服务，扫描准确率稍微低一点，毕竟发包多，难免会出现误判什么的。。
+缺点就是不能探测服务，扫描准确率稍微低一点，毕竟发包多，难免会出现误判什么的。。<br>
 
-
-**（PS：看客户需求选择相应的工具了，量多的话建议使用Masscan，不过时间要是充足也可以使用Nmap，量少当然是Nmap啦）**
+**PS：看客户需求选择相应的工具了，量多的话建议使用Masscan，不过时间要是充足也可以使用Nmap，量少当然是Nmap啦**
 
 ---
-<h3>Masscan下载地址</h3>
 
+Masscan下载地址：<br>
 ```
 https://github.com/robertdavidgraham/masscan
 ```
 
-基本命令:
+----
 
-```
+基本扫描命令:
+
+```bash
 masscan -p0-65535 192.168.0.0/16 --rate=10000 -oX /root/xxx.xml
 ```
 
