--- a/_posts/2018-07-21-Windows安全应急--反隐身术.md
+++ b/_posts/2018-07-21-Windows安全应急--反隐身术.md
@@ -2,7 +2,7 @@
 layout: post
 title: "（五）Windows安全应急--反隐身术"
 date: 2018-07-21
-description: "应急响应（Windows篇）"
+description: "应急响应"
 tag: 应急响应（Windows篇）
 ---
 ---
@@ -10,21 +10,31 @@ tag: 应急响应（Windows篇）
 
 ### 前言：
 
-本次非法BC很狡猾，，<br>
+本次非法菠菜很狡猾，<br>
 
-隐藏在正常文件中，，<br/>
+隐藏在正常文件中，<br/>
 
 下面就总结一下让他显形的一些方法。<br/>
 
----
+----
 
+### 目录：
 
+* <a href="#a1" target="_self">1. dir命令</a>
+* <a href="#a2" target="_self">2. 文件夹选项</a>
+* <a href="#a3" target="_self">3. 移行大法</a>
+* <a href="#a4" target="_self">4. 注册表</a>
+* <a href="#a5" target="_self">5. 工具</a>
+* <a href="#a6" target="_self">后话</a>
 
-### NO.1 dir命令
+----
+
+### <span id = "a1">NO.1 dir命令</span>
 
 首先做个演示，把演示01这个文件夹隐藏起来，<br>
 
 ![images](/images/2018-07-21/ys01.png)
+
 ---
 
 在文件夹上是看不到了，<br>
@@ -32,11 +42,11 @@ tag: 应急响应（Windows篇）
 我们可以使用dir命令查看，<br>
 
 ![images](/images/2018-07-21/ys02.png)
+
 ---
 
-------
 
-### NO.2 文件夹选项--显示隐藏
+### <span id = "a2">NO.2 文件夹选项--显示隐藏</span>
 
 这个是非常常规的了，<br>
 
@@ -46,8 +56,6 @@ tag: 应急响应（Windows篇）
 
 -----
 
-------------
-
 **有些隐藏文件很顽固，上面两种常规方法可能搞不定，**<br>
 
 **下面再讲一些其他方法。**
@@ -55,7 +63,7 @@ tag: 应急响应（Windows篇）
 ---------
 
 
-### NO.3 移行大法
+### <span id = "a3">NO.3 移行大法</span>
 
 看能不能把文件移动到其他文件夹下，<br>
 
@@ -89,31 +97,29 @@ attrib -r -a -s -h C:\abc
 ---
 
 
-### NO.4 注册表
+### <span id = "a4">NO.4 注册表</span>
 
 修改注册表可以达到禁止查看隐藏文件的目的，<br>
 
 开始 - 运行输入regedit，打开注册表编辑器<br>
 
-修改<br>
-
+修改：<br>
 **HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows\CurrentVersion\Explorer\ Advanced\Folder\Hidden\SHOWALL**<br>
 
-CheckedValue的值<br>
-
+CheckedValue的值：<br>
 **1**表示显示，<br>
 
 **0**表示不显示。<br>
 
 具体可以看看这个<br>
-
 ```
 https://zhidao.baidu.com/question/80942273.html
 ```
 
 --------
 
-### NO.5 工具
+
+### <span id = "a5">NO.5 工具</span>
 
 使用一些工具也可以达到隐藏效果，<br>
 
@@ -121,7 +127,8 @@ https://zhidao.baidu.com/question/80942273.html
 
 ---------
 
-### 后续：
+
+### <span id = "hh">后话：</span>
 
 一些命令详情可以看看这个系列的第一篇，Windows安全应急--多个DOS命令的使用<br>
 
