--- a/_posts/2018-07-28-Windows安全应急--非预期啃菠菜.md
+++ b/_posts/2018-07-28-Windows安全应急--非预期啃菠菜.md
@@ -2,19 +2,28 @@
 layout: post
 title: "（六）Windows安全应急--非预期啃菠菜"
 date: 2018-07-28
-description: "应急响应（Windows篇）"
+description: "应急响应"
 tag: 应急响应（Windows篇）
 ---
 ---
 
+### 目录：
 
-### 前言：
+* <a href="#a1" target="_self">非预期解决</a>
+* <a href="#f1" target="_self">附1：一些Linux解压命令</a>
+* <a href="#hh" target="_self">后话</a>
+* <a href="#jsy" target="_self">结束语</a>
+
+----
+
+
+### <span id = "a1">非预期解决：</span>
 
 为什么说非预期呢！！！<br>
 
 来看看，，<br/>
 
----
+------
 
 这次菠菜是真的狗<br>
 
@@ -29,9 +38,9 @@ tag: 应急响应（Windows篇）
 付上之前的截图，加密、隐藏工具<br>
 
 ![images](/images/2018-07-21/ys05.png)
----
 
----------
+------
+
 
 然后怎么解决他的呢？<br>
 
@@ -59,12 +68,12 @@ tag: 应急响应（Windows篇）
 
 ----------
 
-**补充：Linux一些解压命令**
+### <span id = "f1">附1：一些Linux解压命令</span>
 
 **tar** 命令可以打包文件和目录 <br>
-参数：<br>
 
--c: 建立压缩档案 <br>
+参数：<br>
+-c: 建立压缩 <br>
 
 -x：解压 <br>
 
@@ -74,7 +83,13 @@ tag: 应急响应（Windows篇）
 
 -u：更新原压缩包中的文件<br>
 
-这五个是独立的命令，压缩解压都要用到其中一个，可以和别的命令连用但只能用其中一个。下面的参数是根据需要在压缩或解压档案时可选的。<br>
+------
+
+这五个是独立的命令，压缩解压都要用到其中一个，可以和别的命令连用但只能用其中一个。<br>
+
+下面的参数是根据需要在压缩或解压时可选的。<br>
+
+-----
 
 -z：有gzip属性的 <br>
 
@@ -117,14 +132,14 @@ tag: 应急响应（Windows篇）
 
 提取干净文件之后，使用工具粉碎原来那整个父级目录，<br>
 
-再把干净的父级目录替换上去就OK了<br>
+再把干净的父级目录替换上去就OK了 <br>
 
 真的很狗很狗
 
 
 ---------
 
-### 后话：
+### <span id = "hh">后话：</span>
 
 弄了几天，<br>
 
@@ -140,9 +155,8 @@ tag: 应急响应（Windows篇）
 
 ----------
 
-### 结束语：
+### <span id = "jsy">结束语：</span>
 
 这一系列六篇到这里就告一段落了，<br>
 
 期待！！！
-
