--- a/_posts/2019-01-01-9102年的心愿单.md
+++ b/_posts/2019-01-01-9102年的心愿单.md
@@ -13,7 +13,7 @@ tag: 随心笔记
 
 2019希望有所为<br>
 
-**目标有：**<br>
+**目标：**<br>
 
 - [ ] 学好代码审计，并且能够审计简单的cms
 - [ ] 能够用Python编写POC，并且能够编写简单的扫描等小工具
@@ -24,7 +24,5 @@ tag: 随心笔记
 - [ ] 多写点文章总结
 - [ ] 最想的你！！！
 
-好了，啰啰嗦嗦一大堆，<br>
-
-**毕竟丑小鸭也想变成天鹅啊！**
+好了，啰啰嗦嗦一大堆。<br>
 
