--- a/_posts/2019-03-19-代码审计--一道简单的文件包含题目的多种利用方式.md
+++ b/_posts/2019-03-19-代码审计--一道简单的文件包含题目的多种利用方式.md
@@ -25,8 +25,30 @@ tag: 代码审计
 
 ------
 
+### 目录：
 
-### NO.1 传统方法
+* <a href="#a1" target="_self">1. 传统方法</a>
+    * <a href="#a2" target="_self">isset()函数</a>
+    * <a href="#a3" target="_self">error_reporting()函数</a>
+    * <a href="#a4" target="_self">include函数</a>
+    * <a href="#a5" target="_self">highlight_file()函数</a>
+* <a href="#a6" target="_self">2. php伪协议</a>
+    * <a href="#a7" target="_self">allow_url_fopen()函数</a>
+    * <a href="#a8" target="_self">allow_url_include()函数</a>
+    * <a href="#a9" target="_self">php://filter协议</a>
+    * <a href="#a10" target="_self">file://协议</a>
+    * <a href="#a11" target="_self">php://input协议</a>
+    * <a href="#a12" target="_self">fputs()函数</a>
+    * <a href="#a13" target="_self">fopen()函数</a>
+* <a href="#a14" target="_self">3. 远程包含</a>
+* <a href="#a15" target="_self">4. session文件包含</a>
+* <a href="#zj" target="_self">总结</a>
+* <a href="#wx" target="_self">参考文献</a>
+
+------
+
+
+### <span id = "a1">NO.1 传统方法</span>
 
 首先来看下代码
 
@@ -46,25 +68,25 @@ if(@isset($_GET["file"])){
 
 ----
 
-**`isset()`**函数检测变量是否设置，是返回true，否则返回false<br>
+<span id = "a2">**`isset()`**</span>函数检测变量是否设置，是返回true，否则返回false<br>
 
 语法：bool isset( mixed var [, mixed var [, ...]] )<br>
 
 ----
 
-**`error_reporting()`**函数能够在运行时设置 error_reporting 指令。`0`为关闭错误报告<br>
+<span id = "a2">**`error_reporting()`**</span>函数能够在运行时设置 error_reporting 指令。`0`为关闭错误报告<br>
 
 语法：error_reporting(level)<br>
 
 ----
 
-**`include`** 函数包含并运行指定文件。<br>
+<span id = "a4">**`include`**</span> 函数包含并运行指定文件。<br>
 
 这个应该大家都很熟悉了。
 
 ---
 
-**`highlight_file()`**函数对文件进行语法高亮显示。<br>
+<span id = "a5">**`highlight_file()`**</span>函数对文件进行语法高亮显示。<br>
 
 语法：highlight_file(filename,return)<br>
 
@@ -84,8 +106,7 @@ if(@isset($_GET["file"])){
 -----
 
 
-
-### NO.2 php伪协议
+### <span id = "a6">NO.2 php伪协议</span>
 
 对于php伪协议，网上也有很多的文章，<br/>
 
@@ -93,15 +114,15 @@ if(@isset($_GET["file"])){
 
 谈到伪协议就不得不先说`allow_url_fopen `和`allow_url_include`这两个函数。<br/>
 
-`allow_url_fopen函数`：默认值是ON，允许url里的封装协议访问文件 <br>
+<span id = "a7">`allow_url_fopen函数`</span>：默认值是ON，允许url里的封装协议访问文件 <br>
 
-`allow_url_include`：默认值是OFF,不允许包含url里的封装协议包含文件
+<span id = "a8">`allow_url_include函数`</span>：默认值是OFF，不允许包含url里的封装协议包含文件
 
 接下来看看CTF中几个常用的伪协议。<br/>
 
 ------
 
-**1. php://filter**<br>
+<span id = "a9">**1. php://filter**</span> <br>
 
 php://filter协议在CTF中经常出现，通常配合base64来读取源码，<br>
 
@@ -130,7 +151,7 @@ http://localhost/include.php?file=php://filter/read=convert.base64-encode/resour
 
 接下来看看跟`php://filter`很像的一个协议<br>
 
-**file://协议(不是伪协议)**<br/>
+<span id = "a10">**file://协议(不是伪协议)**</span> <br/>
 
 说明： `file://` — 访问本地文件系统 <br/>
 
@@ -159,7 +180,7 @@ http://localhost/include.php?file=php://filter/read=convert.base64-encode/resour
 
 ----
 
-**2. php://input协议**<br>
+<span id = "a11">**2. php://input协议**</span> <br>
 
 说明：简单来说就是能够将post请求中的数据作为PHP代码执行<br>
 
@@ -180,7 +201,7 @@ http://localhost/include.php?file=php://filter/read=convert.base64-encode/resour
 
 ---
 
-**fputs()**函数将内容写入一个打开的文件中。<br>
+<span id = "a12">**fputs()**</span>函数将内容写入一个打开的文件中。<br>
 
 语法：fputs(file,string,length)<br>
 
@@ -191,7 +212,7 @@ http://localhost/include.php?file=php://filter/read=convert.base64-encode/resour
 
 ----
 
-**fopen()**函数打开文件或者 URL。<br>
+<span id = "a13">**fopen()**</span>函数打开文件或者 URL。<br>
 
 语法：fopen(filename,mode,include_path,context)<br>
 
@@ -238,8 +259,7 @@ http://localhost/include.php?file=shell.jpg
 ------
 
 
-
-### NO.3 远程包含
+### <span id = "a14">NO.3 远程包含</span>
 
 既然是文件包含的题目，当然就离不开远程文件包含了，<br>
 
@@ -301,8 +321,7 @@ http://localhost/include.php?file=php://filter/read=convert.base64-decode/resour
 -------
 
 
-
-### NO.4 session文件包含
+### <span id = "a15">NO.4 session文件包含</span>
 
 这题我们稍微改动一下，增加一个session<br>
 
@@ -332,13 +351,19 @@ if(@isset($_GET["file"])){
 
 ![images](/images/2019-03-19/ln09.png)
 
+------
+
 然后我们可以通过phpinfo知道session存放的路径，<br>
 
 ![images](/images/2019-03-19/ln10.png)
 
+-----
+
 然后去文件夹中发现确实存在这个临时文件，<br>
 
 ![images](/images/2019-03-19/ln11.png)
+
+-----
 
 然后进行读取，`session`临时文件格式为`sess_xxx` 发现是我们刚刚传入的flag字段<br>
 ```
@@ -346,6 +371,8 @@ http://localhost/include.php?file=../tmp/tmp/sess_onkqtedht4iucf6bnnjpgqu0g7
 ```
 
 ![images](/images/2019-03-19/ln12.png)
+
+-----
 
 如果当我们传入的值为 `<?php phpinfo();?>` 会出现什么情况
 
@@ -356,7 +383,7 @@ http://localhost/include.php?file=../tmp/tmp/sess_onkqtedht4iucf6bnnjpgqu0g7
 --------
 
 
-### 总结
+### <span id = "zj">总结</span>
 
 首先真的挺感谢朋友们对我的支持，<br>
 
@@ -368,7 +395,8 @@ http://localhost/include.php?file=../tmp/tmp/sess_onkqtedht4iucf6bnnjpgqu0g7
 
 --------
 
-### 参考文献
+
+### <span id = "wx">参考文献</span>
 
 `https://www.freebuf.com/column/148886.html`<br>
 `http://www.cnblogs.com/Oran9e/p/8082962.html`<br>
