--- a/_posts/2019-03-27-DVWA代码审计--文件上传.md
+++ b/_posts/2019-03-27-DVWA代码审计--文件上传.md
@@ -24,8 +24,15 @@ tag: 代码审计
 ### 目录：
 
 * <a href="#low" target="_self">Low</a>
+    * <a href="#payload" target="_self">basename()函数</a>
+    * <a href="#or" target="_self">move_uploaded_file()函数</a>
+    * <a href="#ob" target="_self">FILES函数</a>
 * <a href="#medium" target="_self">Medium</a>
 * <a href="#high" target="_self">High</a>
+    * <a href="#payload" target="_self">substr()函数</a>
+    * <a href="#or" target="_self">strrpos()函数</a>
+    * <a href="#ob" target="_self">strtolower()函数</a>
+    * <a href="#un" target="_self">getimagesize()函数</a>
 * <a href="#f1" target="_self">附1：文件上传可控点</a>
 * <a href="#f2" target="_self">附2：上传绕过--客户端</a>
 * <a href="#f3" target="_self">附3：上传绕过--服务端</a>
@@ -170,8 +177,6 @@ UPLOAD_ERR_NO_FILE <br>
 ------
 
 
-
-
 ### <span id = "medium">NO.2 Medium</span>
 
 代码，<br>
@@ -220,18 +225,19 @@ if( isset( $_POST[ 'Upload' ] ) ) {
 
 ![images](/images/2019-03-27/file02.png) <br>
 
+------
+
 这里直接抓包将`Content-Type` 值改为`image/jpeg` 即可绕过 <br>
 
 ![images](/images/2019-03-27/file03.png) <br>
+
+-----
 
 这种方法在渗透测试中也经常使用，<br>
 
 另外，如果不修改mime类型的话，此题没有其他绕过方法了。
 
 -------
-
-
-
 
 
 ### NO.3 <span id = "high">High</span>
@@ -328,7 +334,6 @@ echo strrpos("I love php, I love php too!","php");
     * ucfirst() - 把字符串中的首字符转换为大写
     * ucwords() - 把字符串中每个单词的首字符转换为大写
 
-
 --------
 
 **`getimagesize()`** 函数用于获取图像大小及相关信息。<br>
@@ -375,9 +380,13 @@ $uploaded_ext  = substr( $uploaded_name, strrpos( $uploaded_name, '.' ) + 1);
 
 ![images](/images/2019-03-27/file04.png) <br>
 
+------
+
 然后打开编辑器可以看到一句话 <br>
 
 ![images](/images/2019-03-27/file05.png) <br>
+
+-----
 
 然后这里直接以`jpg`后缀上传，然后采用文件包含的方式访问，<br>
 
