--- a/_posts/2019-04-11-AVDemo漏洞平台黑盒测试.md
+++ b/_posts/2019-04-11-AVDemo漏洞平台黑盒测试.md
@@ -11,9 +11,7 @@ tag: Web安全
 
 AVDemo漏洞平台--黑盒测试<br>
 
-环境：<br>
-
-phpStudy + php 5.6
+环境：phpStudy + php 5.6
 
 ---
 
@@ -137,6 +135,8 @@ Linux下可以使用 `useradd` ，<br>
 
 ![images](/images/2019-04-11/06.png) <br>
 
+------
+
 试了几个方法还是不行，然后看了处理上传的代码，<br>
 
 没有返回路径，文件名也挺复杂的，<br>
@@ -175,7 +175,7 @@ Linux下可以使用 `useradd` ，<br>
 
 ------
 
-既然 **and** 被吃了，那来试试 **||** ，<br>
+既然 **and** 被吃了，那来试试 **`||`** ，<br>
 
 发现被替换成了空白符，<br>
 
