--- a/_posts/2099-09-09-日记.md
+++ b/_posts/2099-09-09-日记.md
@@ -142,3 +142,12 @@ emmmmm
 ---------------
 修复了VAuditDemo漏洞平台的一些bug，<br>
 由于平台本身原因，再加上本地环境问题，导致漏洞无法去测试
+
+<br>
+
+**2019-04-12**
+---------------
+花了一下午时间给全部文章加了目录，<br>
+然后修修改改了一些错误，<br>
+之前的文章排版真的太那个了，<br>
+改的快吐了。
