--- a/_posts/2018-05-30-应急响应--在应急响应中需要了解的信息.md
+++ b/_posts/2018-05-30-应急响应--在应急响应中需要了解的信息.md
@@ -2,12 +2,13 @@
 layout: post
 title: "（三）Windows安全应急--在应急响应中需要知道的信息"
 date: 2018-05-19
-description: "应急响应（Windows篇）"
+description: "应急响应"
 tag: 应急响应（Windows篇）
 ---
 ---
 
 **在网络安全事件发生后，一般是要去客户现场排查问题的，**<br>
+
 **那么要想解决问题，信息的完整性决定了这次任务的成败。。**
 
 ---
@@ -39,18 +40,17 @@ tag: 应急响应（Windows篇）
 ---
 
 
-**PS：特殊说明**
+**PS：特殊说明** <br>
 
 1. 如果被攻击的服务器是在内网（外网不能直接访问），那么需要了解是否跟其他服务器有连接，如果有，那么也需要排查那台服务器<br>
 
 2. 如果都没有外连情况，那么需要排查服务器是否安装有远程控制之类的软件了
 
-
 ---
 
 ### 2. 你需要解决的问题：
 
-（PS：一般需要解决的问题如下）<br>
+一般需要解决的问题如下：<br>
 
 1. 攻击时间，结束时间（可以从日志上分析）<br>
 
@@ -63,7 +63,6 @@ tag: 应急响应（Windows篇）
 5. 检查是否还有隐藏后门，遗留文件等（可以从高危网站目录上查看，如upload等目录）<br>
 
 6. 检查网站后台是否有可疑操作日志<br>
-
 
 ---
 
@@ -82,4 +81,4 @@ tag: 应急响应（Windows篇）
 
 ---
 
-（PS：后续遇到的问题也将持续补充。。）
+后续遇到的问题也将持续补充。。
