--- a/_posts/2019-03-23-DVWA代码审计--反射型XSS.md
+++ b/_posts/2019-03-23-DVWA代码审计--反射型XSS.md
@@ -32,13 +32,30 @@ Web应用程序对用户的输入过滤不足产生的，<br/>
 ### 目录：
 
 * <a href="#low" target="_self">Low</a>
-    * <a href="#chang" target="_self">一些常用的标签</a>
+* <a href="#chang" target="_self">在没有任何过滤的情况下，一些常用的标签</a>
+    * <a href="#a1" target="_self">array_key_exists()函数</a>
+    * <a href="#a2" target="_self">pre标签</a>
+    * <a href="#a3" target="_self">img标签</a>
+    * <a href="#a4" target="_self">input标签</a>
+    * <a href="#a5" target="_self">details标签</a>
+    * <a href="#a6" target="_self">svg标签</a>
+    * <a href="#a7" target="_self">select标签</a>
+    * <a href="#a8" target="_self">iframe标签</a>
+    * <a href="#a9" target="_self">video标签</a>
+    * <a href="#a10" target="_self">audio标签</a>
+    * <a href="#a11" target="_self">body标签</a>
+    * <a href="#a12" target="_self">textarea标签</a>
+    * <a href="#a13" target="_self">keygen标签</a>
+    * <a href="#a14" target="_self">marquee标签</a>
+    * <a href="#a15" target="_self">isindex标签</a>
 * <a href="#medium" target="_self">Medium</a>
+    * <a href="#a16" target="_self">str_replace()函数</a>
 * <a href="#high" target="_self">High</a>
+    * <a href="#a17" target="_self">preg_replace()函数</a>
 * <a href="#xss1" target="_self">附1： XSS挖掘方法</a>
 * <a href="#xss2" target="_self">附2： XSS的一些绕过方法</a>
-* [总结](#总结)
-* [参考文献](#参考文献)
+* <a href="#zj" target="_self">总结</a>
+* <a href="#wx" target="_self">参考文献</a>
 
 
 -------
@@ -64,7 +81,7 @@ if( array_key_exists( "name", $_GET ) && $_GET[ 'name' ] != NULL ) {
 
 ----
 
-**`array_key_exists()`**函数检查某个数组中是否存在指定的键名，如果键名存在则返回 true，如果键名不存在则返回 false。<br>
+<span id = "a1">**`array_key_exists()`**</span>函数检查某个数组中是否存在指定的键名，如果键名存在则返回 true，如果键名不存在则返回 false。<br>
 
 语法：array_key_exists(key,array)<br>
 
@@ -76,11 +93,13 @@ array_key_exists( "name", $_GET )
 
 ----
 
-**`<pre>`**标签可定义预格式化的文本。<br>
+<span id = "a2">**`<pre>`**</span>标签可定义预格式化的文本。<br>
 
-**预格式化：**
+**预格式化：** <br>
 就是保留文字在源代码中的格式，页面中显示的和源代码中的效果完全一致。<br>
+
 浏览器再显示其中的内容时，会完全按照其真正的文本格式来显示，<br>
+
 例如，原封不动地保留文档中的空白，如空格、制表符等。<br>
 
 ----
@@ -95,7 +114,7 @@ array_key_exists( "name", $_GET )
 
 **1.** 想办法利用代码中的标签，比如：`<script>' . $_GET[ 'name' ] . '</script>`，<br>
 
-      那么输入`alert(/xss/)`的话就会形成`<script>alert(/xss/)</script>`
+那么输入`alert(/xss/)`的话就会形成`<script>alert(/xss/)</script>`
 
 **2.** 闭合代码中的一些标签，然后想办法绕过waf
 
@@ -113,7 +132,7 @@ array_key_exists( "name", $_GET )
 
 我们可以去这样构造payload：`'</pre>;<script>alert(/xss/)</script>` <br>
 
-然后输入之后就会变成：
+然后输入之后就会变成：<br>
 ```php
 echo '<pre>Hello ' '</pre>;<script>alert(/xss/)</script> '</pre>';
 ```
@@ -125,6 +144,7 @@ echo '<pre>Hello ' '</pre>;<script>alert(/xss/)</script> '</pre>';
 
 -----
 
+
 ### <span id = "chang">在没有任何过滤的情况下，一些常用的标签</span>：
 
 下面这些标签大部分是可以自动触发的，无需用户去交互，<br>
@@ -132,13 +152,13 @@ echo '<pre>Hello ' '</pre>;<script>alert(/xss/)</script> '</pre>';
 大部分情况下我们也是希望是自动触发而不是等用户去触发，<br>
 
 payload如下： <br>
-**1.** `<img src=1 onerror=alert("xss");>`
+**1.** <span id = "a3">`<img src=1 onerror=alert("xss");>`</span>
 
 ![images](/images/2019-03-23/xss03.png)
 
 ----
 
-**2.** `<input onfocus="alert('xss');">`
+**2.** <span id = "a4">`<input onfocus="alert('xss');">`</span>
 
 点击小框后触发xss
 
@@ -162,69 +182,69 @@ payload如下： <br>
 
 ---
 
-**5.** `<details ontoggle="alert('xss');">`
+**5.** <span id = "a5">`<details ontoggle="alert('xss');">`</span>
 
-  `<details>` 标签规定了用户可见的或者隐藏的需求的补充细节。<br>
+**details** 标签规定了用户可见的或者隐藏的需求的补充细节。<br>
 
-  `<details>` 标签用来供用户开启关闭的交互式控件。任何形式的内容都能被放在 `<details>` 标签里边。<br>
+**details** 标签用来供用户开启关闭的交互式控件。任何形式的内容都能被放在 `<details>` 标签里边。<br>
 
-  使用open属性触发ontoggle事件，无需用户去触发 <br>
+使用open属性触发ontoggle事件，无需用户去触发 <br>
 
 ![images](/images/2019-03-23/xss07.png)
 
 ----
 
-**6.** `<svg onload=alert("xss");>`
+**6.** <span id = "a6">`<svg onload=alert("xss");>`</span>
 
-  SVG 即 Scalable Vector Graphics，是一种用来绘制矢量图的 HTML5 标签。<br>
+SVG 即 **Scalable Vector Graphics** ，是一种用来绘制矢量图的 HTML5 标签。<br>
 
-  onload 事件会在页面或图像加载完成后立即发生。<br>
+onload 事件会在页面或图像加载完成后立即发生。<br>
 
 ![images](/images/2019-03-23/xss08.png)
 
 ----
 
-**7.** `<select onfocus=alert(xss)></select>`
+**7.** <span id = "a7">`<select onfocus=alert(xss)></select>`</span>
 
-  `select` 标签可创建单选或多选菜单。<br>
+**select** 标签可创建单选或多选菜单。<br>
 
-  通过autofocus属性执行本身的focus事件，这个向量是使焦点自动跳到输入元素上,触发焦点事件，无需用户去触发 <br>
+通过autofocus属性执行本身的focus事件，这个向量是使焦点自动跳到输入元素上,触发焦点事件，无需用户去触发 <br>
 
 ![images](/images/2019-03-23/xss09.png)
 
 ---
 
-**8.** `<iframe onload=alert("xss");></iframe>`
+**8.** <span id = "a8">`<iframe onload=alert("xss");></iframe>`</span>
 
-  `iframe` 标签会创建包含另外一个文档的内联框架（即行内框架）。
+**iframe** 标签会创建包含另外一个文档的内联框架（即行内框架）。
 
 ![images](/images/2019-03-23/xss10.png)
 
 ----
 
-**9.** `<video><source onerror="alert('xss')">`
+**9.** <span id = "a9">`<video><source onerror="alert('xss')">`</span>
 
-  `<video>` 标签定义视频，比如电影片段或其他视频流。<br>
+**video** 标签定义视频，比如电影片段或其他视频流。<br>
 
-  `<source>` 标签为媒介元素（比如 `<video>` 和 `<audio>`）定义媒介资源。<br>
+**source** 标签为媒介元素（比如 `<video>` 和 `<audio>`）定义媒介资源。<br>
 
-  它允许您规定可替换的视频/音频文件供浏览器根据它对媒体类型或者编解码器的支持进行选择。<br>
+它允许您规定可替换的视频/音频文件供浏览器根据它对媒体类型或者编解码器的支持进行选择。<br>
 
 ![images](/images/2019-03-23/xss11.png)
 
 ---
 
-**10.** `<audio src=x  onerror=alert("xss");>`
+**10.** <span id = "a10">`<audio src=x  onerror=alert("xss");>`</span>
 
-  `<audio>` 标签定义声音，比如音乐或其他音频流。<br>
+**audio** 标签定义声音，比如音乐或其他音频流。<br>
 
 ![images](/images/2019-03-23/xss12.png)
 
 ---
 
-**11.** `<body/onload=alert("xss");>`
+**11.** <span id = "a11">`<body/onload=alert("xss");>`</span>
 
-  `<body>` 这个标签大家都很属性啦，就不多说
+**body** 这个标签大家都很属性啦，就不多说
 
 ----
 
@@ -236,41 +256,41 @@ payload如下： <br>
 
 ------
 
-**13.** `<textarea onfocus=alert("xss"); autofocus>`
+**13.** <span id = "a12">`<textarea onfocus=alert("xss"); autofocus>`</span>
 
-  `onfocus` 事件在对象获得焦点时发生 <br>
+**onfocus** 事件在对象获得焦点时发生 <br>
 
-  `autofocus` 属性规定在页面加载后文本区域自动获得焦点。<br>
+**autofocus** 属性规定在页面加载后文本区域自动获得焦点。<br>
 
-  `<textarea>` 标签定义多行的文本输入控件，就是我们熟悉的文本域标签。<br>
+**textarea** 标签定义多行的文本输入控件，就是我们熟悉的文本域标签。<br>
 
 ![images](/images/2019-03-23/xss14.png)
 
 ------
 
-**14.** `<keygen autofocus onfocus=alert(/xss/)>`
+**14.** <span id = "a13">`<keygen autofocus onfocus=alert(/xss/)>`</span>
 
-  `<keygen>` 标签规定用于表单的密钥对生成器字段 <br>
+**keygen** 标签规定用于表单的密钥对生成器字段 <br>
 
 ![images](/images/2019-03-23/xss15.png) <br>
 
 -----
 
-**15.** `<marquee onstart=alert("xss")></marquee>`
+**15.** <span id = "a14">`<marquee onstart=alert("xss")></marquee>`</span>
 
-  `<marquee>` 标签是HTML标签中创建文字滚动的标签。<br>
+**marquee** 标签是HTML标签中创建文字滚动的标签。<br>
 
-  首标签`<marquee>`和尾标签`</marquee>`之间的内容就是滚动内容。<br>
+首标签`<marquee>`和尾标签`</marquee>`之间的内容就是滚动内容。<br>
 
 ![images](/images/2019-03-23/xss16.png)
 
 ---
 
-**16.**`<isindex type=image src=1 onerror=alert("xss")>` //仅限于IE
+**16.** <span id = "a15">`<isindex type=image src=1 onerror=alert("xss")>`</span>  //仅限于IE
 
-  `<isindex>` 标签的作用是使浏览器显示一个对话框，提示用户输入单行文本 <br>
+**isindex** 标签的作用是使浏览器显示一个对话框，提示用户输入单行文本 <br>
 
-  所有这里本菜使用的火狐浏览器并没有弹框 <br>
+所有这里本菜使用的火狐浏览器并没有弹框 <br>
 
 ![images](/images/2019-03-23/xss17.png)  <br>
 
@@ -342,7 +362,7 @@ if( array_key_exists( "name", $_GET ) && $_GET[ 'name' ] != NULL ) {
 
 来温故一下函数，<br/>
 
-**`str_replace()`**字符串替换函数，有三个必填参数<br/>
+<span id = "a16">**`str_replace()`**</span>字符串替换函数，有三个必填参数<br/>
 
 分别是：**`str_replace(要查找的值，要替换的值，被搜索的字符串)`**<br>
 
@@ -383,8 +403,6 @@ payload: `<scr<script>ipt>alert("xss")</script>` <br>
 ---------
 
 
-
-
 ### <span id = "high">NO.3 High</span>
 
 ```php
@@ -402,7 +420,7 @@ if( array_key_exists( "name", $_GET ) && $_GET[ 'name' ] != NULL ) {
 ?> 
 ```
 
-**`preg_replace`** 函数执行一个正则表达式的搜索和替换。<br>
+<span id = "a17">**`preg_replace()`**</span> 函数执行一个正则表达式的搜索和替换。<br>
 
 语法： mixed preg_replace ( mixed $pattern , mixed $replacement , mixed $subject [, int $limit = -1 [, int &$count ]] ) <br>
 
@@ -481,7 +499,7 @@ https://xz.aliyun.com/t/4067
 --------
 
 
-### 总结
+### <span id = "zj">总结</span>
 
 该说点什么呢，<br>
 
@@ -489,7 +507,7 @@ https://xz.aliyun.com/t/4067
 
 --------
 
-### 参考文献
+### <span id = "wx">参考文献</span>
 
 `https://xz.aliyun.com/t/4067`<br>
 `https://xz.aliyun.com/t/2936`<br>
